--- a/notes/cpp/0132.html
+++ b/notes/cpp/0132.html
@@ -82,7 +82,7 @@
         <h1 class="code">04 普通函数与函数模板区别.cpp</h1>
         <pre>
             <code class="code">
-#include<iostream>
+#include&lt;iostream&gt;
 using namespace std;
 
 //普通函数与函数模板区别
@@ -98,7 +98,7 @@ int myAdd01(int a, int b)
 }
 
 //函数模板
-template<typename T>
+template&lt;typename T&gt;
 T myAdd02(T a, T b)
 {
 	return a + b;
@@ -109,13 +109,13 @@ void test01()
 	int a = 10;
 	int b = 20;
 	char c = 'c';  // a - 97  c - 99
-	cout << myAdd01(a, c) << endl;
+	cout &lt;&lt; myAdd01(a, c) &lt;&lt; endl;
 
 	//自动类型推导  不会发生隐式类型转换
-	//cout << myAdd02(a, c) << endl;
+	//cout &lt;&lt; myAdd02(a, c) &lt;&lt; endl;
 
 	//显示指定类型  会发生隐式类型转换
-	cout << myAdd02<int>(a, c) << endl;
+	cout &lt;&lt; myAdd02&lt;int&gt;(a, c) &lt;&lt; endl;
 }
 
 int main()
