--- a/notes/cpp/0165.html
+++ b/notes/cpp/0165.html
@@ -79,108 +79,55 @@
         </div>
         <hr>
         <!-- 正文 -->
-        <h1 class="code">37 deque容器 - 插入和删除.cpp</h1>
+        <h1 class="code">36 deque容器 - 大小操作.cpp</h1>
         <pre>
             <code class="code">
-#include<iostream>
+#include&lt;iostream&gt;
 using namespace std;
-#include<deque>
-//deque容器插入和删除
+#include&lt;deque&gt;
 
-void printDeque(const deque<int>& d)
+//deque容器大小操作
+void printDeque(const deque&lt;int&gt;& d)
 {
-	for (deque<int>::const_iterator it = d.begin(); it != d.end(); it++)
+	for (deque&lt;int&gt;::const_iterator it = d.begin(); it != d.end(); it++)
 	{
-		cout << *it << " ";
+		cout &lt;&lt; *it &lt;&lt; " ";
 	}
-	cout << endl;
+	cout &lt;&lt; endl;
 }
 
-//两端操作
 void test01()
 {
-	deque<int> d1;
-
-	//尾插
-	d1.push_back(10);
-	d1.push_back(20);
-
-	//头插
-	d1.push_front(100);
-	d1.push_front(200);
-
-	//200 100 10 20
+	deque&lt;int&gt; d1;
+	for (int i = 0; i &lt; 10; i++)
+	{
+		d1.push_back(i);
+	}
 	printDeque(d1);
 
-	//尾删
-	d1.pop_back();
-	//200 100 10
+	if (d1.empty())
+	{
+		cout &lt;&lt; "d1为空" &lt;&lt; endl;
+	}
+	else
+	{
+		cout &lt;&lt; "d1不为空" &lt;&lt; endl;
+		cout &lt;&lt; "d1的大小为: " &lt;&lt; d1.size() &lt;&lt; endl;
+		//deque容器没有容量概念
+	}
+
+	//重新指定大小
+	//d1.resize(15);
+	d1.resize(15, 1);
 	printDeque(d1);
 
-	//头删
-	d1.pop_front();
-	//100 10
-	printDeque(d1);
-}
-
-void test02()
-{
-	deque<int> d1;
-	d1.push_back(10);
-	d1.push_back(20);
-	d1.push_front(100);
-	d1.push_front(200);
-
-	// 200 100 10 20
-	printDeque(d1);
-
-	//insert插入
-	d1.insert(d1.begin(), 1000);
-	// 1000 200 100 10 20
-	printDeque(d1);
-
-	d1.insert(d1.begin(), 2, 10000);
-	// 10000 10000 1000 200 100 10 20
-	printDeque(d1);
-
-	//按照区间进行插入
-	deque<int> d2;
-	d2.push_back(1);
-	d2.push_back(2);
-	d2.push_back(3);
-	
-	d1.insert(d1.begin(), d2.begin(), d2.end());
-	// 10000 10000 1000 200 100 10 20
-	printDeque(d1);
-}
-
-void test03()
-{
-	deque<int> d1;
-	d1.push_back(10);
-	d1.push_back(20);
-	d1.push_front(100);
-	d1.push_front(200);
-
-	//删除
-	deque<int>::iterator it = d1.begin();
-	it++;
-	d1.erase(it);
-	// 200 10 20
-	printDeque(d1);
-
-	//按区间方式删除
-	//d1.erase(d1.begin(), d1.end());
-	//清空
-	d1.clear();
+	d1.resize(5);
 	printDeque(d1);
 }
 
 int main()
 {
-	//test01();
-	//test02();
-	test03();
+	test01();
 
 	return 0;
 }
