--- a/notes/cpp/0167.html
+++ b/notes/cpp/0167.html
@@ -79,27 +79,17 @@
         </div>
         <hr>
         <!-- 正文 -->
-        <h1 class="code">39 deque容器 - 排序.cpp</h1>
+        <h1 class="code">38 deque容器 - 数据存取.cpp</h1>
         <pre>
             <code class="code">
-#include<iostream>
+#include&lt;iostream&gt;
 using namespace std;
-#include<deque>
-#include<algorithm>  //标准算法头文件
+#include&lt;deque&gt;
 
-void printDeque(const deque<int>& d)
-{
-	for (deque<int>::const_iterator it = d.begin(); it != d.end(); it++)
-	{
-		cout << *it << " ";
-	}
-	cout << endl;
-}
-
-//deque容器排序
+//deque容器数据存取
 void test01()
 {
-	deque<int> d;
+	deque&lt;int&gt; d;
 	d.push_back(10);
 	d.push_back(20);
 	d.push_back(30);
@@ -107,15 +97,23 @@ void test01()
 	d.push_front(200);
 	d.push_front(300);
 
-	//300 200 100 10 20 30
-	printDeque(d);
+	//通过[]方式访问元素
+	// 300 200 100 10 20 30
+	for (int i = 0; i &lt; d.size(); i++)
+	{
+		cout &lt;&lt; d[i] &lt;&lt; " ";
+	}
+	cout &lt;&lt; endl;
 
-	//排序  默认排序规则  从小到大 升序
-	//对于支持随机访问的迭代器，都可以利用sort算法直接对其进行排序
-	//vector容器也可以利用sort进行排序
-	sort(d.begin(), d.end());
-	cout << "排序后: " << endl;
-	printDeque(d);
+	//通过at方式来访问元素
+	for (int i = 0; i &lt; d.size(); i++)
+	{
+		cout &lt;&lt; d.at(i) &lt;&lt; " ";
+	}
+	cout &lt;&lt; endl;
+
+	cout &lt;&lt; "第一个元素为: " &lt;&lt; d.front() &lt;&lt; endl;
+	cout &lt;&lt; "最后一个元素: " &lt;&lt; d.back() &lt;&lt; endl;
 }
 
 int main()
