--- a/notes/cpp/0218.html
+++ b/notes/cpp/0218.html
@@ -79,107 +79,45 @@
         </div>
         <hr>
         <!-- 正文 -->
-        <h1 class="code">15 类模板案例 - 数组类封装.cpp</h1>
+        <h1 class="code">89 常用集合算法 - set_union.cpp</h1>
         <pre>
             <code class="code">
-#include<iostream>
+#include&lt;iostream&gt;
 using namespace std;
-#include "头文件/MyArray.hpp"
-#include<string>
+#include&lt;vector&gt;
+#include&lt;algorithm&gt;
 
-void printIntArray(MyArray<int>& arr)
+//常用集合算法 set_union
+void myPrint(int val)
 {
-	for (int i = 0; i < arr.getSize(); i++)
-	{
-		cout << arr[i] << endl;
-	}
+	cout &lt;&lt; val &lt;&lt; " ";
 }
 
 void test01()
 {
-	MyArray<int> arr1(5);
-	
-	for (int i = 0; i < 5; i++)
+	vector&lt;int&gt; v1;
+	vector&lt;int&gt; v2;
+
+	for (int i = 0; i &lt; 10; i++)
 	{
-		//利用尾插法向数组中插入数据
-		arr1.Push_Back(i);
-	}
-	cout << "arr1的打印输出为: " << endl;
-	printIntArray(arr1);
-
-	cout << "arr1的容量为: " << arr1.getCapacity() << endl;
-	cout << "arr1的大小为: " << arr1.getSize() << endl;
-
-	MyArray<int>arr2(arr1);
-
-	cout << "arr2的打印输出为: " << endl;
-
-	printIntArray(arr2);
-
-	//尾删
-	arr2.Pop_Back();
-	cout << "arr2尾删后: " << endl;
-	cout << "arr2的容量为: " << arr2.getCapacity() << endl;
-	cout << "arr2的大小为: " << arr2.getSize() << endl;
-
-	//MyArray<int>arr3(100);
-	//arr3 = arr1;
-}
-
-//测试自定义数据类型
-class Person
-{
-public:
-
-	Person() {};
-	Person(string name, int age)
-	{
-		this->m_Name = name;
-		this->m_Age = age;
+		v1.push_back(i);
+		v2.push_back(i + 5);
 	}
 
-	string m_Name;
-	int m_Age;
-};
+	vector&lt;int&gt; vTarget;
+	//目标容器提前开辟空间
+	//最特殊情况 两个容器没有交集，并集大小就是两个容器size相加
+	vTarget.resize(v1.size() + v2.size());
 
-void printPersonArray(MyArray<Person>& arr)
-{
-	for (int i = 0; i < arr.getSize(); i++)
-	{
-		cout << "姓名: " << arr[i].m_Name << " 年龄: " << arr[i].m_Age << endl;
-	}
-}
+	vector&lt;int&gt;::iterator itEnd = set_union(v1.begin(), v1.end(), v2.begin(), v2.end(), vTarget.begin());
 
-void test02()
-{
-	MyArray<Person> arr(10);
-
-	Person p1("孙悟空", 999);
-	Person p2("韩信", 30);
-	Person p3("妲己", 20);
-	Person p4("赵云", 25);
-	Person p5("安琪拉", 27);
-
-	//将数据插入到数组中
-	arr.Push_Back(p1);
-	arr.Push_Back(p2);
-	arr.Push_Back(p3);
-	arr.Push_Back(p4);
-	arr.Push_Back(p5);
-
-	//打印数组
-	printPersonArray(arr);
-	
-	//输出容量
-	cout << "arr容量为: " << arr.getCapacity() << endl;
-	//输出大小
-	cout << "arr大小为: " << arr.getSize() << endl;
+	for_each(vTarget.begin(), itEnd, myPrint);
+	cout &lt;&lt; endl;
 }
 
 int main()
 {
-	//test01();
-	test02();
+	test01();
 
 	return 0;
 }
