--- a/notes/cpp/0133.html
+++ b/notes/cpp/0133.html
@@ -82,7 +82,7 @@
         <h1 class="code">05 普通函数与函数模板调用规则.cpp</h1>
         <pre>
             <code class="code">
-#include<iostream>
+#include&lt;iostream&gt;
 using namespace std;
 
 //普通函数与函数模板调用规则
@@ -93,19 +93,19 @@ using namespace std;
 
 void myPrint(int a, int b)
 {
-	cout << "调用普通函数" << endl;
+	cout &lt;&lt; "调用普通函数" &lt;&lt; endl;
 }
 
-template<typename T>
+template&lt;typename T&gt;
 void myPrint(T a, T b)
 {
-	cout << "调用的模板" << endl;
+	cout &lt;&lt; "调用的模板" &lt;&lt; endl;
 }
 
-template<typename T>
+template&lt;typename T&gt;
 void myPrint(T a, T b, T c)
 {
-	cout << "调用重载的模板" << endl;
+	cout &lt;&lt; "调用重载的模板" &lt;&lt; endl;
 }
 
 void test01()
@@ -116,7 +116,7 @@ void test01()
 	//myPrint(a, b);
 
 	//通过空模板的参数列表，强制调用函数模板
-	//myPrint<>(a, b);
+	//myPrint&lt;&gt;(a, b);
 
 	//myPrint(a, b, 100);
 
