--- a/notes/cpp/0134.html
+++ b/notes/cpp/0134.html
@@ -82,9 +82,9 @@
         <h1 class="code">06 模板的局限性.cpp</h1>
         <pre>
             <code class="code">
-#include<iostream>
+#include&lt;iostream&gt;
 using namespace std;
-#include<string>
+#include&lt;string&gt;
 
 //模板局限性
 //模板并不是万能的，有些特定数据类型，需要用具体化方式做特殊实现
@@ -95,8 +95,8 @@ public:
 
 	Person(string name, int age)
 	{
-		this->m_Name = name;
-		this->m_Age = age;
+		this-&gt;m_Name = name;
+		this-&gt;m_Age = age;
 	}
 
 	//姓名
@@ -106,7 +106,7 @@ public:
 };
 
 //对比两个数是否相等函数
-template<typename T>
+template&lt;typename T&gt;
 bool myCompare(T& a, T& b)
 {
 	if (a == b)
@@ -120,7 +120,7 @@ bool myCompare(T& a, T& b)
 }
 
 //利用具体化Person的版本实现代码，具体化优先调用
-template<> bool myCompare(Person& p1, Person& p2)
+template&lt;&gt; bool myCompare(Person& p1, Person& p2)
 {
 	if (p1.m_Name == p2.m_Name && p1.m_Age == p2.m_Age)
 	{
@@ -141,11 +141,11 @@ void test01()
 
 	if (ret)
 	{
-		cout << "a == b" << endl;
+		cout &lt;&lt; "a == b" &lt;&lt; endl;
 	}
 	else
 	{
-		cout << "a != b" << endl;
+		cout &lt;&lt; "a != b" &lt;&lt; endl;
 	}
 }
 
@@ -158,11 +158,11 @@ void test02()
 
 	if (ret)
 	{
-		cout << "p1 == p2" << endl;
+		cout &lt;&lt; "p1 == p2" &lt;&lt; endl;
 	}
 	else
 	{
-		cout << "p1 != p2" << endl;
+		cout &lt;&lt; "p1 != p2" &lt;&lt; endl;
 	}
 }
 
