--- a/notes/cpp/0135.html
+++ b/notes/cpp/0135.html
@@ -82,24 +82,24 @@
         <h1 class="code">07 类模板语法.cpp</h1>
         <pre>
             <code class="code">
-#include<iostream>
+#include&lt;iostream&gt;
 using namespace std;
-#include<string>
+#include&lt;string&gt;
 
 //ÀàÄ£°å
-template<class NameType, class AgeType>
+template&lt;class NameType, class AgeType&gt;
 class Person
 {
 public:
 	Person(NameType name, AgeType age)
 	{
-		this->m_Name = name;
-		this->m_Age = age;
+		this-&gt;m_Name = name;
+		this-&gt;m_Age = age;
 	}
 
 	void showPerson()
 	{
-		cout << "name: " << this->m_Name << " age: " << this->m_Age << endl;
+		cout &lt;&lt; "name: " &lt;&lt; this-&gt;m_Name &lt;&lt; " age: " &lt;&lt; this-&gt;m_Age &lt;&lt; endl;
 	}
 
 	NameType m_Name;
@@ -108,7 +108,7 @@ public:
 
 void test01()
 {
-	Person<string, int> p1("ËïÎò¿Õ", 999);
+	Person&lt;string, int&gt; p1("ËïÎò¿Õ", 999);
 	p1.showPerson();
 }
 
