--- a/notes/cpp/0137.html
+++ b/notes/cpp/0137.html
@@ -82,7 +82,7 @@
         <h1 class="code">09 类模板中成员函数创建时机.cpp</h1>
         <pre>
             <code class="code">
-#include<iostream>
+#include&lt;iostream&gt;
 using namespace std;
 
 //类模板中成员函数创建时机
@@ -93,7 +93,7 @@ class Person1
 public:
 	void showPerson1()
 	{
-		cout << "Person1 show" << endl;
+		cout &lt;&lt; "Person1 show" &lt;&lt; endl;
 	}
 };
 
@@ -102,11 +102,11 @@ class Person2
 public:
 	void showPerson2()
 	{
-		cout << "Person2 show" << endl;
+		cout &lt;&lt; "Person2 show" &lt;&lt; endl;
 	}
 };
 
-template<class T>
+template&lt;class T&gt;
 class MyClass
 {
 public:
@@ -128,7 +128,7 @@ public:
 
 void test01()
 {
-	MyClass<Person2> m;
+	MyClass&lt;Person2&gt; m;
 	//m.func1();
 	m.func2();
 }
