--- a/notes/cpp/0138.html
+++ b/notes/cpp/0138.html
@@ -82,25 +82,25 @@
         <h1 class="code">10 类模板对象做函数参数.cpp</h1>
         <pre>
             <code class="code">
-#include<iostream>
+#include&lt;iostream&gt;
 using namespace std;
-#include<string>
+#include&lt;string&gt;
 
 //类模板对象做函数参数
-template<class T1, class T2>
+template&lt;class T1, class T2&gt;
 class Person
 {
 public:
 
 	Person(T1 name, T2 age)
 	{
-		this->m_Name = name;
-		this->m_Age = age;
+		this-&gt;m_Name = name;
+		this-&gt;m_Age = age;
 	}
 
 	void showPerson()
 	{
-		cout << "姓名: " << this->m_Name << " 年龄: " << this->m_Age << endl;
+		cout &lt;&lt; "姓名: " &lt;&lt; this-&gt;m_Name &lt;&lt; " 年龄: " &lt;&lt; this-&gt;m_Age &lt;&lt; endl;
 	}
 
 	T1 m_Name;
@@ -108,43 +108,43 @@ public:
 };
 
 //1.指定传入类型
-void printPerson1(Person<string, int>& p)
+void printPerson1(Person&lt;string, int&gt;& p)
 {
 	p.showPerson();
 }
 
 void test01()
 {
-	Person<string, int> p("孙悟空", 100);
+	Person&lt;string, int&gt; p("孙悟空", 100);
 	printPerson1(p);
 }
 
 //2.参数模板化
-template<class T1, class T2>
-void printPerson2(Person<T1, T2> p)
+template&lt;class T1, class T2&gt;
+void printPerson2(Person&lt;T1, T2&gt; p)
 {
 	p.showPerson();
-	cout << "T1的类型为: " << typeid(T1).name() << endl;
-	cout << "T2的类型为: " << typeid(T2).name() << endl;
+	cout &lt;&lt; "T1的类型为: " &lt;&lt; typeid(T1).name() &lt;&lt; endl;
+	cout &lt;&lt; "T2的类型为: " &lt;&lt; typeid(T2).name() &lt;&lt; endl;
 }
 
 void test02()
 {
-	Person<string, int> p("猪八戒", 90);
+	Person&lt;string, int&gt; p("猪八戒", 90);
 	printPerson2(p);
 }
 
 //3.整个类模板化
-template<class T>
+template&lt;class T&gt;
 void printPerson3(T& p)
 {
 	p.showPerson();
-	cout << "T的数据类型为: " << typeid(T).name() << endl;
+	cout &lt;&lt; "T的数据类型为: " &lt;&lt; typeid(T).name() &lt;&lt; endl;
 }
 
 void test03()
 {
-	Person<string, int> p("唐僧", 30);
+	Person&lt;string, int&gt; p("唐僧", 30);
 	printPerson3(p);
 }
 
