--- a/notes/cpp/0140.html
+++ b/notes/cpp/0140.html
@@ -82,23 +82,23 @@
         <h1 class="code">12 类模板成员函数类外实现.cpp</h1>
         <pre>
             <code class="code">
-#include<iostream>
+#include&lt;iostream&gt;
 using namespace std;
 
 //类模板成员函数类外实现
-template<class T1, class T2>
+template&lt;class T1, class T2&gt;
 class Person
 {
 public:
 	Person(T1 name, T2 age);
 	//{
-	//	this->m_Name = name;
-	//	this->m_Age = age;
+	//	this-&gt;m_Name = name;
+	//	this-&gt;m_Age = age;
 	//}
 
 	void showPerson();
 	//{
-	//	cout << "姓名: " << this->m_Name << " 年龄: " << this->m_Age << endl;
+	//	cout &lt;&lt; "姓名: " &lt;&lt; this-&gt;m_Name &lt;&lt; " 年龄: " &lt;&lt; this-&gt;m_Age &lt;&lt; endl;
 	//}
 
 	T1 m_Name;
@@ -106,23 +106,23 @@ public:
 };
 
 //构造函数类外实现
-template<class T1, class T2>
-Person<T1, T2>::Person(T1 name, T2 age)
+template&lt;class T1, class T2&gt;
+Person&lt;T1, T2&gt;::Person(T1 name, T2 age)
 {
-	this->m_Name = name;
-	this->m_Age = age;
+	this-&gt;m_Name = name;
+	this-&gt;m_Age = age;
 }
 
 //成员函数类外实现
-template<class T1, class T2>
-void Person<T1, T2>::showPerson()
+template&lt;class T1, class T2&gt;
+void Person&lt;T1, T2&gt;::showPerson()
 {
-	cout << "姓名: " << this->m_Name << " 年龄: " << this->m_Age << endl;
+	cout &lt;&lt; "姓名: " &lt;&lt; this-&gt;m_Name &lt;&lt; " 年龄: " &lt;&lt; this-&gt;m_Age &lt;&lt; endl;
 }
 
 void test01()
 {
-	Person<string, int> p("Tom", 20);
+	Person&lt;string, int&gt; p("Tom", 20);
 	p.showPerson();
 }
 
