--- a/notes/cpp/0141.html
+++ b/notes/cpp/0141.html
@@ -82,7 +82,7 @@
         <h1 class="code">13 - 1 类模板分文件编写.cpp</h1>
         <pre>
             <code class="code">
-#include<iostream>
+#include&lt;iostream&gt;
 using namespace std;
 
 //#include "头文件/person.h"  错误
@@ -93,8 +93,8 @@ using namespace std;
 #include "头文件/person.hpp"
 
 //类模板分文件编写问题以及解决
-//#include<string>
-//template<class T1, class T2>
+//#include&lt;string&gt;
+//template&lt;class T1, class T2&gt;
 //class Person
 //{
 //public:
@@ -106,22 +106,22 @@ using namespace std;
 //	T2 m_Age;
 //};
 
-//template<class T1, class T2>
-//Person<T1, T2>::Person(T1 name, T2 age)
+//template&lt;class T1, class T2&gt;
+//Person&lt;T1, T2&gt;::Person(T1 name, T2 age)
 //{
-//	this->m_Name = name;
-//	this->m_Age = age;
+//	this-&gt;m_Name = name;
+//	this-&gt;m_Age = age;
 //}
 //
-//template<class T1, class T2>
-//void Person<T1, T2>::showPerson()
+//template&lt;class T1, class T2&gt;
+//void Person&lt;T1, T2&gt;::showPerson()
 //{
-//	cout << "姓名: " << this->m_Name << " 年龄: " << this->m_Age << endl;
+//	cout &lt;&lt; "姓名: " &lt;&lt; this-&gt;m_Name &lt;&lt; " 年龄: " &lt;&lt; this-&gt;m_Age &lt;&lt; endl;
 //}
 
 void test01()
 {
-	Person<string, int> p("Jerry", 18);
+	Person&lt;string, int&gt; p("Jerry", 18);
 	p.showPerson();
 }
 
