--- a/notes/cpp/0142.html
+++ b/notes/cpp/0142.html
@@ -84,17 +84,17 @@
             <code class="code">
 #include "头文件/person.h"
 
-template<class T1, class T2>
-Person<T1, T2>::Person(T1 name, T2 age)
+template&lt;class T1, class T2&gt;
+Person&lt;T1, T2&gt;::Person(T1 name, T2 age)
 {
-	this->m_Name = name;
-	this->m_Age = age;
+	this-&gt;m_Name = name;
+	this-&gt;m_Age = age;
 }
 
-template<class T1, class T2>
-void Person<T1, T2>::showPerson()
+template&lt;class T1, class T2&gt;
+void Person&lt;T1, T2&gt;::showPerson()
 {
-	cout << "姓名: " << this->m_Name << " 年龄: " << this->m_Age << endl;
+	cout &lt;&lt; "姓名: " &lt;&lt; this-&gt;m_Name &lt;&lt; " 年龄: " &lt;&lt; this-&gt;m_Age &lt;&lt; endl;
 }
             </code>
         </pre>
