--- a/notes/cpp/0143.html
+++ b/notes/cpp/0143.html
@@ -82,42 +82,42 @@
         <h1 class="code">14 类模板与友元.cpp</h1>
         <pre>
             <code class="code">
-#include<iostream>
+#include&lt;iostream&gt;
 using namespace std;
-#include<string>
+#include&lt;string&gt;
 
 //通过全局函数 打印Person信息
 
 //提前让编译器知道Person类存在
-template<class T1, class T2>
+template&lt;class T1, class T2&gt;
 class Person;
 
 //类外实现
-template<class T1, class T2>
-void printPerson2(Person<T1, T2> p)
+template&lt;class T1, class T2&gt;
+void printPerson2(Person&lt;T1, T2&gt; p)
 {
-	cout << "类外实现 --- 姓名: " << p.m_Name << " 年龄: " << p.m_Age << endl;
+	cout &lt;&lt; "类外实现 --- 姓名: " &lt;&lt; p.m_Name &lt;&lt; " 年龄: " &lt;&lt; p.m_Age &lt;&lt; endl;
 }
 
-template<class T1, class T2>
+template&lt;class T1, class T2&gt;
 class Person
 {
 	//全局函数 类内实现
-	friend void printPerson(Person<T1, T2> p)
+	friend void printPerson(Person&lt;T1, T2&gt; p)
 	{
-		cout << "姓名: " << p.m_Name << " 年龄: " << p.m_Age << endl;
+		cout &lt;&lt; "姓名: " &lt;&lt; p.m_Name &lt;&lt; " 年龄: " &lt;&lt; p.m_Age &lt;&lt; endl;
 	}
 
 	//全局函数 类外实现
 	//加空模板参数列表
 	//如果全局函数 是类外实现，需要让编译器提前知道这个函数的存在
-	friend void printPerson2<>(Person<T1, T2> p);
+	friend void printPerson2&lt;&gt;(Person&lt;T1, T2&gt; p);
 
 public:
 	Person(T1 name, T2 age)
 	{
-		this->m_Name = name;
-		this->m_Age = age;
+		this-&gt;m_Name = name;
+		this-&gt;m_Age = age;
 	}
 
 private:
@@ -128,7 +128,7 @@ private:
 //1.全局函数在类内实现
 void test01()
 {
-	Person<string, int> p("Tom", 20);
+	Person&lt;string, int&gt; p("Tom", 20);
 
 	printPerson(p);
 }
@@ -136,7 +136,7 @@ void test01()
 //2.全局函数在类外实现
 void test02()
 {
-	Person<string, int> p("Jerry", 20);
+	Person&lt;string, int&gt; p("Jerry", 20);
 
 	printPerson2(p);
 }
