--- a/notes/cpp/0144.html
+++ b/notes/cpp/0144.html
@@ -79,57 +79,107 @@
         </div>
         <hr>
         <!-- 正文 -->
-        <h1 class="code">16 STL初识 - vector存放内置数据类型.cpp</h1>
+        <h1 class="code">15 类模板案例 - 数组类封装.cpp</h1>
         <pre>
             <code class="code">
-#include<iostream>
+#include&lt;iostream&gt;
 using namespace std;
-#include<vector>
-#include<algorithm>  //标准算法头文件
+#include "头文件/MyArray.hpp"
+#include&lt;string&gt;
 
-//vector容器存放内置数据类型
-
-void myPrint(int val)
+void printIntArray(MyArray&lt;int&gt;& arr)
 {
-	cout << val << endl;
+	for (int i = 0; i &lt; arr.getSize(); i++)
+	{
+		cout &lt;&lt; arr[i] &lt;&lt; endl;
+	}
 }
 
 void test01()
 {
-	//创建了一个vector容器，数组
-	vector<int> v;
+	MyArray&lt;int&gt; arr1(5);
+	
+	for (int i = 0; i &lt; 5; i++)
+	{
+		//利用尾插法向数组中插入数据
+		arr1.Push_Back(i);
+	}
+	cout &lt;&lt; "arr1的打印输出为: " &lt;&lt; endl;
+	printIntArray(arr1);
 
-	//向容器中插入数据
-	v.push_back(10);
-	v.push_back(20);
-	v.push_back(30);
-	v.push_back(40);
+	cout &lt;&lt; "arr1的容量为: " &lt;&lt; arr1.getCapacity() &lt;&lt; endl;
+	cout &lt;&lt; "arr1的大小为: " &lt;&lt; arr1.getSize() &lt;&lt; endl;
 
-	//通过迭代器访问容器中的数据
-	//vector<int>::iterator itBegin = v.begin();  //起始迭代器 指向容器中第一个元素
-	//vector<int>::iterator itEnd = v.end();  //结束迭代器 指向容器中最后一个元素的下一个位置
+	MyArray&lt;int&gt;arr2(arr1);
 
-	//第一种遍历方式
-	//while (itBegin != itEnd)
-	//{
-	//	cout << *itBegin << endl;
-	//	itBegin++;
-	//}
+	cout &lt;&lt; "arr2的打印输出为: " &lt;&lt; endl;
 
-	//第二种遍历方式
-	//for (vector<int>::iterator it = v.begin(); it != v.end(); it++)
-	//{
-	//	cout << *it << endl;
-	//}
+	printIntArray(arr2);
 
-	//第三种遍历方式  利用STL提供遍历算法
-	for_each(v.begin(), v.end(), myPrint);
+	//尾删
+	arr2.Pop_Back();
+	cout &lt;&lt; "arr2尾删后: " &lt;&lt; endl;
+	cout &lt;&lt; "arr2的容量为: " &lt;&lt; arr2.getCapacity() &lt;&lt; endl;
+	cout &lt;&lt; "arr2的大小为: " &lt;&lt; arr2.getSize() &lt;&lt; endl;
 
+	//MyArray&lt;int&gt;arr3(100);
+	//arr3 = arr1;
+}
+
+//测试自定义数据类型
+class Person
+{
+public:
+
+	Person() {};
+	Person(string name, int age)
+	{
+		this-&gt;m_Name = name;
+		this-&gt;m_Age = age;
+	}
+
+	string m_Name;
+	int m_Age;
+};
+
+void printPersonArray(MyArray&lt;Person&gt;& arr)
+{
+	for (int i = 0; i &lt; arr.getSize(); i++)
+	{
+		cout &lt;&lt; "姓名: " &lt;&lt; arr[i].m_Name &lt;&lt; " 年龄: " &lt;&lt; arr[i].m_Age &lt;&lt; endl;
+	}
+}
+
+void test02()
+{
+	MyArray&lt;Person&gt; arr(10);
+
+	Person p1("孙悟空", 999);
+	Person p2("韩信", 30);
+	Person p3("妲己", 20);
+	Person p4("赵云", 25);
+	Person p5("安琪拉", 27);
+
+	//将数据插入到数组中
+	arr.Push_Back(p1);
+	arr.Push_Back(p2);
+	arr.Push_Back(p3);
+	arr.Push_Back(p4);
+	arr.Push_Back(p5);
+
+	//打印数组
+	printPersonArray(arr);
+	
+	//输出容量
+	cout &lt;&lt; "arr容量为: " &lt;&lt; arr.getCapacity() &lt;&lt; endl;
+	//输出大小
+	cout &lt;&lt; "arr大小为: " &lt;&lt; arr.getSize() &lt;&lt; endl;
 }
 
 int main()
 {
-	test01();
+	//test01();
+	test02();
 
 	return 0;
 }
