--- a/notes/cpp/0145.html
+++ b/notes/cpp/0145.html
@@ -79,81 +79,57 @@
         </div>
         <hr>
         <!-- 正文 -->
-        <h1 class="code">17 STL初识 - vector存放自定义数据类型.cpp</h1>
+        <h1 class="code">16 STL初识 - vector存放内置数据类型.cpp</h1>
         <pre>
             <code class="code">
-#include<iostream>
+#include&lt;iostream&gt;
 using namespace std;
-#include<vector>
-#include<string>
+#include&lt;vector&gt;
+#include&lt;algorithm&gt;  //标准算法头文件
 
-//vector容器中存放自定义数据类型
-class Person
+//vector容器存放内置数据类型
+
+void myPrint(int val)
 {
-public:
-	Person(string name, int age)
-	{
-		this->m_Name = name;
-		this->m_Age = age;
-	}
-	string m_Name;
-	int m_Age;
-};
+	cout &lt;&lt; val &lt;&lt; endl;
+}
 
 void test01()
 {
-	vector<Person> v;
+	//创建了一个vector容器，数组
+	vector&lt;int&gt; v;
 
-	Person p1("aaa", 10);
-	Person p2("bbb", 20);
-	Person p3("ccc", 30);
-	Person p4("ddd", 40);
-	Person p5("eee", 50);
+	//向容器中插入数据
+	v.push_back(10);
+	v.push_back(20);
+	v.push_back(30);
+	v.push_back(40);
 
-	//向容器中添加数据
-	v.push_back(p1);
-	v.push_back(p2);
-	v.push_back(p3);
-	v.push_back(p4);
-	v.push_back(p5);
+	//通过迭代器访问容器中的数据
+	//vector&lt;int&gt;::iterator itBegin = v.begin();  //起始迭代器 指向容器中第一个元素
+	//vector&lt;int&gt;::iterator itEnd = v.end();  //结束迭代器 指向容器中最后一个元素的下一个位置
 
-	//遍历容器中的数据
-	for (vector<Person>::iterator it = v.begin(); it != v.end(); it++)
-	{
-		//cout << "姓名: " << (*it).m_Name << " 年龄: " << (*it).m_Age << endl;
-		cout << "姓名: " << it->m_Name << " 年龄: " << it->m_Age << endl;
-	}
-}
+	//第一种遍历方式
+	//while (itBegin != itEnd)
+	//{
+	//	cout &lt;&lt; *itBegin &lt;&lt; endl;
+	//	itBegin++;
+	//}
 
-//存放自定义数据类型的指针
-void test02()
-{
-	vector<Person*> v;
+	//第二种遍历方式
+	//for (vector&lt;int&gt;::iterator it = v.begin(); it != v.end(); it++)
+	//{
+	//	cout &lt;&lt; *it &lt;&lt; endl;
+	//}
 
-	Person p1("aaa", 10);
-	Person p2("bbb", 20);
-	Person p3("ccc", 30);
-	Person p4("ddd", 40);
-	Person p5("eee", 50);
+	//第三种遍历方式  利用STL提供遍历算法
+	for_each(v.begin(), v.end(), myPrint);
 
-	//向容器中添加数据
-	v.push_back(&p1);
-	v.push_back(&p2);
-	v.push_back(&p3);
-	v.push_back(&p4);
-	v.push_back(&p5);
-
-	//遍历容器
-	for (vector<Person*>::iterator it = v.begin(); it != v.end(); it++)
-	{
-		cout << "::姓名: " << (*it)->m_Name << " 年龄: " << (*it)->m_Age << endl;
-	}
 }
 
 int main()
 {
-	//test01();
-	test02();
+	test01();
 
 	return 0;
 }
