--- a/notes/cpp/0146.html
+++ b/notes/cpp/0146.html
@@ -79,54 +79,81 @@
         </div>
         <hr>
         <!-- 正文 -->
-        <h1 class="code">18 STL初识 - 容器嵌套容器.cpp</h1>
+        <h1 class="code">17 STL初识 - vector存放自定义数据类型.cpp</h1>
         <pre>
             <code class="code">
-#include<iostream>
+#include&lt;iostream&gt;
 using namespace std;
-#include<vector>
+#include&lt;vector&gt;
+#include&lt;string&gt;
 
-//容器嵌套容器
+//vector容器中存放自定义数据类型
+class Person
+{
+public:
+	Person(string name, int age)
+	{
+		this-&gt;m_Name = name;
+		this-&gt;m_Age = age;
+	}
+	string m_Name;
+	int m_Age;
+};
+
 void test01()
 {
-	vector<vector<int>> v;
+	vector&lt;Person&gt; v;
 
-	//创建小容器
-	vector<int> v1;
-	vector<int> v2;
-	vector<int> v3;
-	vector<int> v4;
-	
-	//向小容器中添加元素
-	for (int i = 0; i < 4; i++)
+	Person p1("aaa", 10);
+	Person p2("bbb", 20);
+	Person p3("ccc", 30);
+	Person p4("ddd", 40);
+	Person p5("eee", 50);
+
+	//向容器中添加数据
+	v.push_back(p1);
+	v.push_back(p2);
+	v.push_back(p3);
+	v.push_back(p4);
+	v.push_back(p5);
+
+	//遍历容器中的数据
+	for (vector&lt;Person&gt;::iterator it = v.begin(); it != v.end(); it++)
 	{
-		v1.push_back(i + 1);
-		v2.push_back(i + 2);
-		v3.push_back(i + 3);
-		v4.push_back(i + 4);
+		//cout &lt;&lt; "姓名: " &lt;&lt; (*it).m_Name &lt;&lt; " 年龄: " &lt;&lt; (*it).m_Age &lt;&lt; endl;
+		cout &lt;&lt; "姓名: " &lt;&lt; it-&gt;m_Name &lt;&lt; " 年龄: " &lt;&lt; it-&gt;m_Age &lt;&lt; endl;
 	}
+}
 
-	//将小容器插入到大容器中
-	v.push_back(v1);
-	v.push_back(v2);
-	v.push_back(v3);
-	v.push_back(v4);
-	
-	//通过大容器，把所有数据遍历一遍
-	for (vector<vector<int>>::iterator it = v.begin(); it != v.end(); it++)
+//存放自定义数据类型的指针
+void test02()
+{
+	vector&lt;Person*&gt; v;
+
+	Person p1("aaa", 10);
+	Person p2("bbb", 20);
+	Person p3("ccc", 30);
+	Person p4("ddd", 40);
+	Person p5("eee", 50);
+
+	//向容器中添加数据
+	v.push_back(&p1);
+	v.push_back(&p2);
+	v.push_back(&p3);
+	v.push_back(&p4);
+	v.push_back(&p5);
+
+	//遍历容器
+	for (vector&lt;Person*&gt;::iterator it = v.begin(); it != v.end(); it++)
 	{
-		//(*it) ---- 容器 vector<int>
-		for (vector<int>::iterator vit = (*it).begin(); vit != (*it).end(); vit++)
-		{
-			cout << *vit << " ";
-		}
-		cout << endl;
+		cout &lt;&lt; "::姓名: " &lt;&lt; (*it)-&gt;m_Name &lt;&lt; " 年龄: " &lt;&lt; (*it)-&gt;m_Age &lt;&lt; endl;
 	}
 }
 
 int main()
 {
-	test01();
+	//test01();
+	test02();
 
 	return 0;
 }
