--- a/notes/cpp/0149.html
+++ b/notes/cpp/0149.html
@@ -79,52 +79,50 @@
         </div>
         <hr>
         <!-- 正文 -->
-        <h1 class="code">21 string容器 - 字符串拼接.cpp</h1>
+        <h1 class="code">20 string容器 - 赋值操作.cpp</h1>
         <pre>
             <code class="code">
-#include<iostream>
+#include&lt;iostream&gt;
 using namespace std;
-#include<string>
 
-//string字符串拼接
-//- string& operator+=(const char* str);				重载+=操作符
-//- string& operator+=(const char c);					重载+=操作符
-//- string& operator+=(const string& str);				重载+=操作符
-//- string& append(const char* s);						把字符串s连接到当前字符串结尾
-//- string& append(const char* s, int n);				把字符串s的前n个字符连接到当前字符串结尾
-//- string& append(const string& s);					同operator+=(const string& str);
-//- string& append(const string& s, int pos, int n);	字符串s中从pos开始的n个字符连接到字符串结尾
+//string赋值操作
+//- string& operator=(const char* s);		char*类型字符串 赋值给当前的字符串
+//- string& operator=(const string& s);		把字符串s赋值给当前的字符串
+//- string& operator=(char c);				字符赋值给当前的字符串
+//- string& assign(const char* s);			把字符串s赋值给当前的字符串
+//- string& assign(const char* s, int n);	把字符串s的前n个字符赋值给当前字符串
+//- string& assign(const string& s);		把字符串s赋值给当前字符串
+//- string& assign(int n, char c);			用n个字符c赋值给当前字符串
 
 void test01()
 {
-	string str1 = "我";
+	string str1;
+	str1 = "hello world";
+	cout &lt;&lt; "str1 = " &lt;&lt; str1 &lt;&lt; endl;
 
-	str1 += "爱玩游戏";
+	string str2;
+	str2 = str1;
+	cout &lt;&lt; "str2 = " &lt;&lt; str2 &lt;&lt; endl;
 
-	cout << "str1 = " << str1 << endl;
+	string str3;
+	str3 = 'a';
+	cout &lt;&lt; "str3 = " &lt;&lt; str3 &lt;&lt; endl;
 
-	str1 += ':';
+	string str4;
+	str4.assign("hello C++");
+	cout &lt;&lt; "str4 = " &lt;&lt; str4 &lt;&lt; endl;
 
-	cout << "str1 = " << str1 << endl;
+	string str5;
+	str5.assign("hello C++", 5);
+	cout &lt;&lt; "str5 = " &lt;&lt; str5 &lt;&lt; endl;
 
-	string str2 = "LOL DNF";
+	string str6;
+	str6.assign(str5);
+	cout &lt;&lt; "str6 = " &lt;&lt; str6 &lt;&lt; endl;
 
-	str1 += str2;
-	cout << "str1 = " << str1 << endl;
-
-	string str3 = "I";
-	str3.append(" love ");
-	cout << "str3 = " << str3 << endl;
-
-	str3.append("game abcde", 4);
-	// I love game
-	cout << "str3 = " << str3 << endl;
-
-	//str3.append(str2);
-	str3.append(str2, 0, 3);  //只截取到LOL
-	str3.append(str2, 4,3);  //只截取到DNF 参数2 从哪个位置开始截取,参数3 截取字符个数
-	// I love game LOL DNF
-	cout << "str3 = " << str3 << endl;
+	string str7;
+	str7.assign(10, 'w');
+	cout &lt;&lt; "str7 = " &lt;&lt; str7 &lt;&lt; endl;
 }
 
 int main()
