--- a/notes/cpp/0150.html
+++ b/notes/cpp/0150.html
@@ -79,53 +79,57 @@
         </div>
         <hr>
         <!-- 正文 -->
-        <h1 class="code">22 string容器 - 字符串查找和替换.cpp</h1>
+        <h1 class="code">21 string容器 - 字符串拼接.cpp</h1>
         <pre>
             <code class="code">
-#include<iostream>
+#include&lt;iostream&gt;
 using namespace std;
-#include<string>
+#include&lt;string&gt;
 
-//字符串查找和替换
+//string字符串拼接
+//- string& operator+=(const char* str);				重载+=操作符
+//- string& operator+=(const char c);					重载+=操作符
+//- string& operator+=(const string& str);				重载+=操作符
+//- string& append(const char* s);						把字符串s连接到当前字符串结尾
+//- string& append(const char* s, int n);				把字符串s的前n个字符连接到当前字符串结尾
+//- string& append(const string& s);					同operator+=(const string& str);
+//- string& append(const string& s, int pos, int n);	字符串s中从pos开始的n个字符连接到字符串结尾
 
-//1.查找
 void test01()
 {
-	string str1 = "abcdefgde";
+	string str1 = "我";
 
-	int pos = str1.find("df");
+	str1 += "爱玩游戏";
 
-	if (pos == -1)
-	{
-		cout << "未找到字符串" << endl;
-	}
-	else
-	{
-		cout << "找到字符串, pos = " << pos << endl;
-	}
-	
-	//rfind
-	//rfind从右往左查找  find从左往右查找
-	pos = str1.rfind("de");
+	cout &lt;&lt; "str1 = " &lt;&lt; str1 &lt;&lt; endl;
 
-	cout << "pos = " << pos << endl;
-}
+	str1 += ':';
 
-//2.替换
-void test02()
-{
-	string str1 = "abcdefg";
+	cout &lt;&lt; "str1 = " &lt;&lt; str1 &lt;&lt; endl;
 
-	//从1号位置起 3个字符 替换为1111
-	str1.replace(1, 3, "1111");
+	string str2 = "LOL DNF";
 
-	cout << "str1 = " << str1 << endl;
+	str1 += str2;
+	cout &lt;&lt; "str1 = " &lt;&lt; str1 &lt;&lt; endl;
+
+	string str3 = "I";
+	str3.append(" love ");
+	cout &lt;&lt; "str3 = " &lt;&lt; str3 &lt;&lt; endl;
+
+	str3.append("game abcde", 4);
+	// I love game
+	cout &lt;&lt; "str3 = " &lt;&lt; str3 &lt;&lt; endl;
+
+	//str3.append(str2);
+	str3.append(str2, 0, 3);  //只截取到LOL
+	str3.append(str2, 4,3);  //只截取到DNF 参数2 从哪个位置开始截取,参数3 截取字符个数
+	// I love game LOL DNF
+	cout &lt;&lt; "str3 = " &lt;&lt; str3 &lt;&lt; endl;
 }
 
 int main()
 {
-	//test01();
-	test02();
+	test01();
 
 	return 0;
 }
