--- a/notes/cpp/0151.html
+++ b/notes/cpp/0151.html
@@ -79,37 +79,53 @@
         </div>
         <hr>
         <!-- 正文 -->
-        <h1 class="code">23 string容器 - 字符串比较.cpp</h1>
+        <h1 class="code">22 string容器 - 字符串查找和替换.cpp</h1>
         <pre>
             <code class="code">
-#include<iostream>
+#include&lt;iostream&gt;
 using namespace std;
-#include<string>
+#include&lt;string&gt;
 
-//字符串比较
+//字符串查找和替换
 
+//1.查找
 void test01()
 {
-	string str1 = "hello";
-	string str2 = "xello";
+	string str1 = "abcdefgde";
 
-	if (str1.compare(str2) == 0)
+	int pos = str1.find("df");
+
+	if (pos == -1)
 	{
-		cout << "str1 等于 str2" << endl;
-	}
-	else if (str1.compare(str2) > 0)
-	{
-		cout << "str1 大于 str2" << endl;
+		cout &lt;&lt; "未找到字符串" &lt;&lt; endl;
 	}
 	else
 	{
-		cout << "str1 小于 str2" << endl;
+		cout &lt;&lt; "找到字符串, pos = " &lt;&lt; pos &lt;&lt; endl;
 	}
+	
+	//rfind
+	//rfind从右往左查找  find从左往右查找
+	pos = str1.rfind("de");
+
+	cout &lt;&lt; "pos = " &lt;&lt; pos &lt;&lt; endl;
+}
+
+//2.替换
+void test02()
+{
+	string str1 = "abcdefg";
+
+	//从1号位置起 3个字符 替换为1111
+	str1.replace(1, 3, "1111");
+
+	cout &lt;&lt; "str1 = " &lt;&lt; str1 &lt;&lt; endl;
 }
 
 int main()
 {
-	test01();
+	//test01();
+	test02();
 
 	return 0;
 }
