--- a/notes/cpp/0154.html
+++ b/notes/cpp/0154.html
@@ -79,42 +79,31 @@
         </div>
         <hr>
         <!-- 正文 -->
-        <h1 class="code">26 string容器 - 子串.cpp</h1>
+        <h1 class="code">25 string容器 - 插入和删除.cpp</h1>
         <pre>
             <code class="code">
-#include<iostream>
+#include&lt;iostream&gt;
 using namespace std;
-#include<string>
+#include&lt;string&gt;
 
-//string求子串
-
+//字符串 插入和删除
 void test01()
 {
-	string str = "abcdef";
+	string str = "hello";
 
-	string subStr = str.substr(1, 3);
+	//插入
+	str.insert(1, "111");
+	//h111ello
+	cout &lt;&lt; "str = " &lt;&lt; str &lt;&lt; endl;
 
-	cout << "subStr = " << subStr << endl;
-}
-
-void test02()
-{
-	string email = "zhangsan@sina.com";
-
-	//从邮件地址中 获取 用户名信息
-
-	int pos = email.find('@');
-	cout << pos << endl;
-
-	string userName = email.substr(0, pos);
-
-	cout << userName << endl;
+	//删除
+	str.erase(1, 3);
+	cout &lt;&lt; "str = " &lt;&lt; str &lt;&lt; endl;
 }
 
 int main()
 {
-	//test01();
-	test02();
+	test01();
 
 	return 0;
 }
