--- a/notes/cpp/0157.html
+++ b/notes/cpp/0157.html
@@ -79,54 +79,52 @@
         </div>
         <hr>
         <!-- 正文 -->
-        <h1 class="code">29 vector容器 - 容量和大小.cpp</h1>
+        <h1 class="code">28 vector容器 - 赋值操作.cpp</h1>
         <pre>
             <code class="code">
-#include<iostream>
+#include&lt;iostream&gt;
 using namespace std;
-#include<vector>
+#include&lt;vector&gt;
 
-void printVector(vector<int>& v)
+void printVector(vector&lt;int&gt;& v)
 {
-	for (vector<int>::iterator it = v.begin(); it != v.end(); it++)
+	for (vector&lt;int&gt;::iterator it = v.begin(); it != v.end(); it++)
 	{
-		cout << *it << " ";
+		cout &lt;&lt; *it &lt;&lt; " ";
 	}
-	cout << endl;
+	cout &lt;&lt; endl;
 }
 
-//vector容器的容量和大小操作
+//28 vector赋值
 void test01()
 {
-	vector<int> v1;
-	for (int i = 0; i < 10; i++)
+	vector&lt;int&gt; v1;
+	for (int i = 0; i &lt; 10; i++)
 	{
 		v1.push_back(i);
 	}
 	printVector(v1);
 
-	if (v1.empty())  //为真 代表容器为空
-	{
-		cout << "v1为空" << endl;
-	}
-	else
-	{
-		cout << "v1不为空" << endl;
-		cout << "v1的容量为: " << v1.capacity() << endl;
-		cout << "v1的大小为: " << v1.size() << endl;
-	}
+	//赋值  operator=
+	vector&lt;int&gt; v2;
+	v2 = v1;
+	printVector(v2);
 
-	//重新指定大小
-	v1.resize(15, 100);  //利用重载版本，可以指定默认填充值，参数2
-	printVector(v1);  //如果重新指定的比原来长了，默认用0填充新的位置
-	
-	v1.resize(5);
-	printVector(v1);  //如果重新指定的比原来短了，超出部分会删除掉
+	//assign  前闭后开[)
+	vector&lt;int&gt; v3;
+	v3.assign(v1.begin(), v1.end());
+	printVector(v3);
+
+	//n个elem方式赋值
+	vector&lt;int&gt; v4;
+	v4.assign(10, 100);
+	printVector(v4);
 }
 
 int main()
 {
 	test01();
+
 	return 0;
 }
             </code>
