--- a/notes/cpp/0163.html
+++ b/notes/cpp/0163.html
@@ -79,44 +79,40 @@
         </div>
         <hr>
         <!-- 正文 -->
-        <h1 class="code">35 deque容器 - 赋值操作.cpp</h1>
+        <h1 class="code">34 deque容器 - 构造函数.cpp</h1>
         <pre>
             <code class="code">
-#include<iostream>
+#include&lt;iostream&gt;
 using namespace std;
-#include<deque>
+#include&lt;deque&gt;
+//deque 构造函数
 
-void printDeque(const deque<int>& d)
+void printDeque(const deque&lt;int&gt;& d)
 {
-	for (deque<int>::const_iterator it = d.begin(); it != d.end(); it++)
+	for (deque&lt;int&gt;::const_iterator it = d.begin(); it != d.end(); it++)
 	{
-		cout << *it << " ";
+		//*it = 100;  容器中的数据不可修改了
+		cout &lt;&lt; *it &lt;&lt; " ";
 	}
-	cout << endl;
+	cout &lt;&lt; endl;
 }
 
-//deque容器赋值操作
 void test01()
 {
-	deque<int> d1;
-	for (int i = 0; i < 10; i++)
+	deque&lt;int&gt; d1;
+	for (int i = 0; i &lt; 10; i++)
 	{
 		d1.push_back(i);
 	}
 	printDeque(d1);
 
-	//operator= 赋值
-	deque<int> d2;
-	d2 = d1;
+	deque&lt;int&gt; d2(d1.begin(), d1.end());
 	printDeque(d2);
 
-	//assign 赋值
-	deque<int> d3;
-	d3.assign(d1.begin(), d1.end());
+	deque&lt;int&gt; d3(10, 100);
 	printDeque(d3);
 
-	deque<int> d4;
-	d4.assign(10, 100);
+	deque&lt;int&gt; d4(d3);
 	printDeque(d4);
 }
 
