--- a/notes/cpp/0168.html
+++ b/notes/cpp/0168.html
@@ -79,39 +79,43 @@
         </div>
         <hr>
         <!-- 正文 -->
-        <h1 class="code">41 stack容器.cpp</h1>
+        <h1 class="code">39 deque容器 - 排序.cpp</h1>
         <pre>
             <code class="code">
-#include<iostream>
+#include&lt;iostream&gt;
 using namespace std;
-#include<stack>
+#include&lt;deque&gt;
+#include&lt;algorithm&gt;  //标准算法头文件
 
-//栈stack容器
+void printDeque(const deque&lt;int&gt;& d)
+{
+	for (deque&lt;int&gt;::const_iterator it = d.begin(); it != d.end(); it++)
+	{
+		cout &lt;&lt; *it &lt;&lt; " ";
+	}
+	cout &lt;&lt; endl;
+}
 
+//deque容器排序
 void test01()
 {
-	//特点：符合先进后出数据结构
-	stack<int> s;
+	deque&lt;int&gt; d;
+	d.push_back(10);
+	d.push_back(20);
+	d.push_back(30);
+	d.push_front(100);
+	d.push_front(200);
+	d.push_front(300);
 
-	//入栈
-	s.push(10);
-	s.push(20);
-	s.push(30);
-	s.push(40);
+	//300 200 100 10 20 30
+	printDeque(d);
 
-	cout << "栈的大小: " << s.size() << endl;
-
-	//只要栈不为空，查看栈顶，并且执行出栈操作
-	while (!s.empty())
-	{
-		//查看栈顶元素
-		cout << "栈顶元素为: " << s.top() << endl;
-
-		//出栈
-		s.pop();
-	}
-
-	cout << "栈的大小: " << s.size() << endl;
+	//排序  默认排序规则  从小到大 升序
+	//对于支持随机访问的迭代器，都可以利用sort算法直接对其进行排序
+	//vector容器也可以利用sort进行排序
+	sort(d.begin(), d.end());
+	cout &lt;&lt; "排序后: " &lt;&lt; endl;
+	printDeque(d);
 }
 
 int main()
