--- a/notes/cpp/0169.html
+++ b/notes/cpp/0169.html
@@ -79,65 +79,118 @@
         </div>
         <hr>
         <!-- 正文 -->
-        <h1 class="code">42 queue容器.cpp</h1>
+        <h1 class="code">40 STL案例 - 评委打分.cpp</h1>
         <pre>
             <code class="code">
-#include<iostream>
+#include&lt;iostream&gt;
 using namespace std;
-#include<queue>
-#include<string>
+#include&lt;vector&gt;
+#include&lt;string&gt;
+#include&lt;deque&gt;
+#include&lt;algorithm&gt;
+#include&lt;ctime&gt;
 
-//队列 Queue
+//有5名选手：选手ABCDE，10个评委分别对每一名选手打分，去除最高分，去除评委中最低分，取平均分
+
 class Person
 {
 public:
-	Person(string name, int age)
+	Person(string name, int score)
 	{
-		this->m_Name = name;
-		this->m_Age = age;
+		this-&gt;m_Name = name;
+		this-&gt;m_Score = score;
 	}
-	string m_Name;
-	int m_Age;
+
+	string m_Name;  //姓名
+	int m_Score;  //平均分
 };
 
-void test01()
+void createPerson(vector&lt;Person&gt;& v)
 {
-	//创建队列
-	queue<Person> q;
-
-	//准备数据
-	Person p1("唐僧", 30);
-	Person p2("孙悟空", 1000);
-	Person p3("猪八戒", 900);
-	Person p4("沙僧", 800);
-
-	//入队
-	q.push(p1);
-	q.push(p2);
-	q.push(p3);
-	q.push(p4);
-
-	cout << "队列大小为: " << q.size() << endl;
-
-	//判断只要队列不为空，查看队头，查看队尾，出队
-	while (!q.empty())
+	string nameSeed = "ABCDE";
+	for (int i = 0; i &lt; 5; i++)
 	{
-		//查看队头
-		cout << "队头元素 --- 姓名: " << q.front().m_Name << " 年龄: " << q.front().m_Age << endl;
+		string name = "选手";
+		name += nameSeed[i];
 
-		//查看队尾
-		cout << "队头元素 --- 姓名: " << q.back().m_Name << " 年龄: " << q.back().m_Age << endl;
+		int score = 0;
 
-		//出队
-		q.pop();
+		Person p(name, score);
+
+		//将创建的Person对象 放入到容器中
+		v.push_back(p);
 	}
+}
 
-	cout << "队列大小为: " << q.size() << endl;
+//打分
+void setScore(vector&lt;Person&gt;& v)
+{
+	for (vector&lt;Person&gt;::iterator it = v.begin(); it != v.end(); it++)
+	{
+		//将评委的分数 放入到deque容器中
+		deque&lt;int&gt; d;
+		for (int i = 0; i &lt; 10; i++)
+		{
+			int score = rand() % 41 + 60;  // 60 ~ 100
+			d.push_back(score);
+		}
+
+		//cout &lt;&lt; "选手: " &lt;&lt; it-&gt;m_Name &lt;&lt; "打分: " &lt;&lt; endl;
+		//for (deque&lt;int&gt;::iterator dit = d.begin(); dit != d.end(); dit++)
+		//{
+		//	cout &lt;&lt; *dit &lt;&lt; " ";
+		//}
+		//cout &lt;&lt; endl;
+
+		//排序
+		sort(d.begin(), d.end());
+
+		//去除最高和最低分
+		d.pop_back();
+		d.pop_front();
+
+		//取平均分
+		int sum = 0;
+		for (deque&lt;int&gt;::iterator dit = d.begin(); dit != d.end(); dit++)
+		{
+			sum += *dit;  //累加每个评委的分数
+		}
+
+		int avg = sum / d.size();
+
+		//将平均分 赋值给选手身上
+		it-&gt;m_Score = avg;
+	}
+}
+
+void showScore(vector&lt;Person&gt;& v)
+{
+	for (vector&lt;Person&gt;::iterator it = v.begin(); it != v.end(); it++)
+	{
+		cout &lt;&lt; "姓名: " &lt;&lt; it-&gt;m_Name &lt;&lt; "平均分: " &lt;&lt; it-&gt;m_Score &lt;&lt; endl;
+	}
 }
 
 int main()
 {
-	test01();
+	//随机数种子
+	srand((unsigned int) time(NULL));
+
+	//1.创建5名选手
+	vector&lt;Person&gt; v;  //存放选手容器
+	createPerson(v);
+
+	//测试
+	//for (vector&lt;Person&gt;::iterator it = v.begin(); it != v.end(); it++)
+	//{
+	//	cout &lt;&lt; "姓名: " &lt;&lt; (*it).m_Name &lt;&lt; " 分数: " &lt;&lt; (*it).m_Score &lt;&lt; endl;
+	//}
+
+	//2.给5名选手打分
+	setScore(v);
+
+	//3.显示最后得分
+	showScore(v);
 
 	return 0;
 }
