--- a/notes/cpp/0170.html
+++ b/notes/cpp/0170.html
@@ -79,49 +79,39 @@
         </div>
         <hr>
         <!-- 正文 -->
-        <h1 class="code">43 list容器 - 构造函数.cpp</h1>
+        <h1 class="code">41 stack容器.cpp</h1>
         <pre>
             <code class="code">
-#include<iostream>
+#include&lt;iostream&gt;
 using namespace std;
-#include<list>
+#include&lt;stack&gt;
 
-//list容器构造函数
-
-void printList(const list<int>& L)
-{
-	for (list<int>::const_iterator it = L.begin(); it != L.end(); it++)
-	{
-		cout << *it << " ";
-	}
-	cout << endl;
-}
+//栈stack容器
 
 void test01()
 {
-	//创建list容器
-	list<int> L1;  //默认构造
+	//特点：符合先进后出数据结构
+	stack&lt;int&gt; s;
 
-	//添加元素
-	L1.push_back(10);
-	L1.push_back(20);
-	L1.push_back(30);
-	L1.push_back(40);
+	//入栈
+	s.push(10);
+	s.push(20);
+	s.push(30);
+	s.push(40);
 
-	//遍历容器
-	printList(L1);
+	cout &lt;&lt; "栈的大小: " &lt;&lt; s.size() &lt;&lt; endl;
 
-	//区间方式构造
-	list<int> L2(L1.begin(), L1.end());
-	printList(L2);
+	//只要栈不为空，查看栈顶，并且执行出栈操作
+	while (!s.empty())
+	{
+		//查看栈顶元素
+		cout &lt;&lt; "栈顶元素为: " &lt;&lt; s.top() &lt;&lt; endl;
 
-	//拷贝构造
-	list<int> L3(L2);
-	printList(L3);
+		//出栈
+		s.pop();
+	}
 
-	//n个ele
-	list<int> L4(10, 1000);
-	printList(L4);
+	cout &lt;&lt; "栈的大小: " &lt;&lt; s.size() &lt;&lt; endl;
 }
 
 int main()
