--- a/notes/cpp/0172.html
+++ b/notes/cpp/0172.html
@@ -79,51 +79,49 @@
         </div>
         <hr>
         <!-- 正文 -->
-        <h1 class="code">45 list容器 - 大小操作.cpp</h1>
+        <h1 class="code">43 list容器 - 构造函数.cpp</h1>
         <pre>
             <code class="code">
-#include<iostream>
+#include&lt;iostream&gt;
 using namespace std;
-#include<list>
+#include&lt;list&gt;
 
-//list容器大小操作
+//list容器构造函数
 
-void printList(const list<int>& L)
+void printList(const list&lt;int&gt;& L)
 {
-	for (list<int>::const_iterator it = L.begin(); it != L.end(); it++)
+	for (list&lt;int&gt;::const_iterator it = L.begin(); it != L.end(); it++)
 	{
-		cout << *it << " ";
+		cout &lt;&lt; *it &lt;&lt; " ";
 	}
-	cout << endl;
+	cout &lt;&lt; endl;
 }
 
 void test01()
 {
-	list<int> L1;
+	//创建list容器
+	list&lt;int&gt; L1;  //默认构造
+
+	//添加元素
 	L1.push_back(10);
 	L1.push_back(20);
 	L1.push_back(30);
 	L1.push_back(40);
 
+	//遍历容器
 	printList(L1);
 
-	//判断容器是否为空
-	if (L1.empty())
-	{
-		cout << "L1为空" << endl;
-	}
-	else
-	{
-		cout << "L1不为空" << endl;
-		cout << "L1的元素个数为: " << L1.size() << endl;
-	}
+	//区间方式构造
+	list&lt;int&gt; L2(L1.begin(), L1.end());
+	printList(L2);
 
-	//重新指定大小
-	L1.resize(10, 10000);
-	printList(L1);
+	//拷贝构造
+	list&lt;int&gt; L3(L2);
+	printList(L3);
 
-	L1.resize(2);
-	printList(L1);
+	//n个ele
+	list&lt;int&gt; L4(10, 1000);
+	printList(L4);
 }
 
 int main()
