--- a/notes/cpp/0173.html
+++ b/notes/cpp/0173.html
@@ -79,93 +79,77 @@
         </div>
         <hr>
         <!-- 正文 -->
-        <h1 class="code">46 list容器 - 插入和删除.cpp</h1>
+        <h1 class="code">44 list容器 - 赋值和交换.cpp</h1>
         <pre>
             <code class="code">
-#include<iostream>
+#include&lt;iostream&gt;
 using namespace std;
-#include<list>
+#include&lt;list&gt;
 
-//list容器插入和删除
+//list容器赋值和交换
 
-//- push_back(elem);		在容器尾部加入一个元素
-//- pop_back();				删除容器中最后一个元素
-//- push_front(elem);		在容器开头插入一个元素
-//- pop_front();			从容器开头移除第一个元素
-//- insert(pos, elem);		在pos位置插入elem元素的拷贝
-//- insert(pos, n, elem);	在pos位置插入n个elem数据
-//- insert(pos, beg, end);	在pos位置插入[beg,end)区间的数据，无返回值
-//- clear();				移除容器的所有数据
-//- erase(beg, end);		删除[beg,end)区间的数据
-//- erase(pos);				删除pos位置的数据，返回下一个数据的位置
-//- remove(elem);			删除容器中所有与elem值匹配的元素
-
-void printList(const list<int>& L)
+void printList(const list&lt;int&gt;& L)
 {
-	for (list<int>::const_iterator it = L.begin(); it != L.end(); it++)
+	for (list&lt;int&gt;::const_iterator it = L.begin(); it != L.end(); it++)
 	{
-		cout << *it << " ";
+		cout &lt;&lt; *it &lt;&lt; " ";
 	}
-	cout << endl;
+	cout &lt;&lt; endl;
 }
 
+//赋值
 void test01()
 {
-	list<int> L;
+	list&lt;int&gt; L1;
 
-	//尾插
-	L.push_back(10);
-	L.push_back(20);
-	L.push_back(30);
+	L1.push_back(10);
+	L1.push_back(20);
+	L1.push_back(30);
+	L1.push_back(40);
 
-	//头插
-	L.push_front(100);
-	L.push_front(200);
-	L.push_front(300);
+	printList(L1);
 
-	// 300 200 100 10 20 30
-	printList(L);
+	list&lt;int&gt; L2;
+	L2 = L1;  //operator=赋值
+	printList(L2);
 
-	//尾删
-	L.pop_back();
-	// 300 200 100 10 20
-	printList(L);
+	list&lt;int&gt; L3;
+	L3.assign(L2.begin(), L2.end());
+	printList(L3);
 
-	//头删
-	L.pop_front();
-	// 200 100 10 20
-	printList(L);
+	list&lt;int&gt; L4;
+	L4.assign(10, 100);
+	printList(L4);
 
-	//insert插入
-	list<int>::iterator it = L.begin();
-	L.insert(++it, 1000);
-	// 200 1000 100 10 20
-	printList(L);
+}
 
-	//删除
-	it = L.begin();
-	L.erase(++it);
-	// 200 100 10 20
-	printList(L);
+//交换
+void test02()
+{
+	list&lt;int&gt; L1;
 
-	//移除
-	L.push_back(10000);
-	L.push_back(10000);
-	L.push_back(10000);
-	L.push_back(10000);
-	printList(L);
+	L1.push_back(10);
+	L1.push_back(20);
+	L1.push_back(30);
+	L1.push_back(40);
 
-	L.remove(10000);
-	printList(L);
+	list&lt;int&gt; L2;
+	L2.assign(10, 100);
 
-	//清空
-	L.clear();
-	printList(L);
+	cout &lt;&lt; "交换前: " &lt;&lt; endl;
+	printList(L1);
+	printList(L2);
+
+	L1.swap(L2);
+	cout &lt;&lt; "交换后: " &lt;&lt; endl;
+	printList(L1);
+	printList(L2);
 }
 
 int main()
 {
-	test01();
+	//test01();
+	test02();
 
 	return 0;
 }
