--- a/notes/cpp/0174.html
+++ b/notes/cpp/0174.html
@@ -79,37 +79,51 @@
         </div>
         <hr>
         <!-- 正文 -->
-        <h1 class="code">47 list容器 - 数据存取.cpp</h1>
+        <h1 class="code">45 list容器 - 大小操作.cpp</h1>
         <pre>
             <code class="code">
-#include<iostream>
+#include&lt;iostream&gt;
 using namespace std;
-#include<list>
+#include&lt;list&gt;
 
-//list容器  数据存取
+//list容器大小操作
+
+void printList(const list&lt;int&gt;& L)
+{
+	for (list&lt;int&gt;::const_iterator it = L.begin(); it != L.end(); it++)
+	{
+		cout &lt;&lt; *it &lt;&lt; " ";
+	}
+	cout &lt;&lt; endl;
+}
 
 void test01()
 {
-	list<int> L1;
+	list&lt;int&gt; L1;
 	L1.push_back(10);
 	L1.push_back(20);
 	L1.push_back(30);
 	L1.push_back(40);
 
-	//L1[0] 不可以用[]访问list容器中的元素
+	printList(L1);
 
-	//L1.at(0) 不可以用at方式访问list容器中的元素
+	//判断容器是否为空
+	if (L1.empty())
+	{
+		cout &lt;&lt; "L1为空" &lt;&lt; endl;
+	}
+	else
+	{
+		cout &lt;&lt; "L1不为空" &lt;&lt; endl;
+		cout &lt;&lt; "L1的元素个数为: " &lt;&lt; L1.size() &lt;&lt; endl;
+	}
 
-	//原因是list本质链表，不是用连续线性空间存储数据，迭代器也是不支持随机访问的
+	//重新指定大小
+	L1.resize(10, 10000);
+	printList(L1);
 
-	cout << "第一个元素为: " << L1.front() << endl;
-	cout << "最后一个元素为: " << L1.back() << endl;
-
-	//验证迭代器是不支持随机访问的
-	list<int>::iterator it = L1.begin();
-	it++;  //支持双向
-	it--;
-	//it = it + 1;  //不支持随机访问
+	L1.resize(2);
+	printList(L1);
 }
 
 int main()
