--- a/notes/cpp/0176.html
+++ b/notes/cpp/0176.html
@@ -79,47 +79,37 @@
         </div>
         <hr>
         <!-- 正文 -->
-        <h1 class="code">50 set容器 - 构造和赋值.cpp</h1>
+        <h1 class="code">47 list容器 - 数据存取.cpp</h1>
         <pre>
             <code class="code">
-#include<iostream>
+#include&lt;iostream&gt;
 using namespace std;
-#include<set>
+#include&lt;list&gt;
 
-//set容器构造和赋值
-void printSet(set<int>& s)
-{
-	for (set<int>::iterator it = s.begin(); it != s.end(); it++)
-	{
-		cout << *it << " ";
-	}
-	cout << endl;
-}
+//list容器  数据存取
 
 void test01()
 {
-	set<int> s1;  //底层: 二叉树
+	list&lt;int&gt; L1;
+	L1.push_back(10);
+	L1.push_back(20);
+	L1.push_back(30);
+	L1.push_back(40);
 
-	//插入数据 只有insert方式
-	s1.insert(10);
-	s1.insert(40);
-	s1.insert(30);
-	s1.insert(20);
-	s1.insert(30);
+	//L1[0] 不可以用[]访问list容器中的元素
 
-	//遍历容器
-	//set容器特点: 所有元素插入时候自动被排序
-	//set容器不允许插入重复值
-	printSet(s1);
+	//L1.at(0) 不可以用at方式访问list容器中的元素
 
-	//拷贝构造
-	set<int> s2(s1);
-	printSet(s2);
+	//原因是list本质链表，不是用连续线性空间存储数据，迭代器也是不支持随机访问的
 
-	//赋值
-	set<int> s3;
-	s3 = s2;
-	printSet(s3);
+	cout &lt;&lt; "第一个元素为: " &lt;&lt; L1.front() &lt;&lt; endl;
+	cout &lt;&lt; "最后一个元素为: " &lt;&lt; L1.back() &lt;&lt; endl;
+
+	//验证迭代器是不支持随机访问的
+	list&lt;int&gt;::iterator it = L1.begin();
+	it++;  //支持双向
+	it--;
+	//it = it + 1;  //不支持随机访问
 }
 
 int main()
