--- a/notes/cpp/0184.html
+++ b/notes/cpp/0184.html
@@ -79,44 +79,24 @@
         </div>
         <hr>
         <!-- 正文 -->
-        <h1 class="code">58 map容器 - 构造和赋值.cpp</h1>
+        <h1 class="code">55 pair对组 - 对组的创建.cpp</h1>
         <pre>
             <code class="code">
-#include<iostream>
+#include&lt;iostream&gt;
 using namespace std;
-#include<map>
+#include&lt;string&gt;
 
-//map容器 构造和赋值
-void printMap(map<int, int>& m)
-{
-	for (map<int, int>::iterator it = m.begin(); it != m.end(); it++)
-	{
-		cout << "key = " << (*it).first << " value = " << it->second << endl;
-	}
-	cout << endl;
-}
-
+//pair对组对组的创建
 void test01()
 {
-	//创建map容器
-	map<int, int> m;
+	pair&lt;string, int&gt; p("Tom", 20);
 
-	//插入时按照key值进行排序
-	m.insert(pair<int, int>(1, 10));
-	m.insert(pair<int, int>(3, 30));
-	m.insert(pair<int, int>(2, 20));
-	m.insert(pair<int, int>(4, 40));
+	cout &lt;&lt; "姓名: " &lt;&lt; p.first &lt;&lt; " 年龄: " &lt;&lt; p.second &lt;&lt; endl;
 
-	printMap(m);
+	//第二种方式
+	pair&lt;string, int&gt; p2 = make_pair("Jerry", 30);
 
-	//拷贝构造
-	map<int, int> m2(m);
-	printMap(m2);
-
-	//赋值
-	map<int, int> m3;
-	m3 = m2;
-	printMap(m3);
+	cout &lt;&lt; "姓名: " &lt;&lt; p2.first &lt;&lt; " 年龄: " &lt;&lt; p2.second &lt;&lt; endl;
 }
 
 int main()
