--- a/notes/cpp/0186.html
+++ b/notes/cpp/0186.html
@@ -79,56 +79,59 @@
         </div>
         <hr>
         <!-- 正文 -->
-        <h1 class="code">60 map容器 - 插入和删除.cpp</h1>
+        <h1 class="code">57 set容器 - 排序(自定义类型).cpp</h1>
         <pre>
             <code class="code">
-#include<iostream>
+#include&lt;iostream&gt;
 using namespace std;
-#include<map>
+#include&lt;string&gt;
+#include&lt;set&gt;
 
-//map容器 插入和删除
+//set容器排序，存放自定义数据类型
 
-void printMap(map<int, int>& m)
+class Person
 {
-	for (map<int, int>::iterator it = m.begin(); it != m.end(); it++)
+public:
+	Person(string name, int age)
 	{
-		cout << "key = " << it->first << " value = " << it->second << endl;
+		this-&gt;m_Name = name;
+		this-&gt;m_Age = age;
 	}
-	cout << endl;
-}
+	string m_Name;
+	int m_Age;
+};
+
+class comparePerson
+{
+public:
+	bool operator()(const Person& p1, const Person p2) const
+	{
+		//按照年龄 降序
+		return p1.m_Age &gt; p2.m_Age;
+	}
+};
 
 void test01()
 {
-	map<int, int> m;
+	//自定义数据类型 都会指定排序规则
+	set&lt;Person, comparePerson&gt; s;
 
-	//插入
-	//第一种
-	m.insert(pair<int, int>(1, 10));
+	//创建Person对象
+	Person p1("刘备", 24);
+	Person p2("关羽", 28);
+	Person p3("张飞", 25);
+	Person p4("赵云", 21);
 
-	//第二种
-	m.insert(make_pair(2, 20));
+	s.insert(p1);
+	s.insert(p2);
+	s.insert(p3);
+	s.insert(p4);
 
-	//第三种
-	m.insert(map<int, int>::value_type(3, 30));
-
-	//第四种
-	m[4] = 40;
-
-	//[]不建议插入，用途 可以利用key访问到value
-	//cout << m[4] << endl;
-	printMap(m);
-
-	//删除
-	m.erase(m.begin());
-	printMap(m);
-
-	m.erase(3);  //按照key删除
-	printMap(m);
-
-	//清空
-	//m.erase(m.begin(), m.end());
-	m.clear();
-	printMap(m);
+	for (set&lt;Person, comparePerson&gt;::iterator it = s.begin(); it != s.end(); it++)
+	{
+		cout &lt;&lt; "姓名: " &lt;&lt; it-&gt;m_Name &lt;&lt; " 年龄: " &lt;&lt; it-&gt;m_Age &lt;&lt; endl;
+	}
+	cout &lt;&lt; endl;
 }
 
 int main()
