--- a/notes/cpp/0187.html
+++ b/notes/cpp/0187.html
@@ -79,41 +79,44 @@
         </div>
         <hr>
         <!-- 正文 -->
-        <h1 class="code">61 map容器 - 查找和统计.cpp</h1>
+        <h1 class="code">58 map容器 - 构造和赋值.cpp</h1>
         <pre>
             <code class="code">
-#include<iostream>
+#include&lt;iostream&gt;
 using namespace std;
-#include<map>
+#include&lt;map&gt;
 
-//map容器 查找和统计
+//map容器 构造和赋值
+void printMap(map&lt;int, int&gt;& m)
+{
+	for (map&lt;int, int&gt;::iterator it = m.begin(); it != m.end(); it++)
+	{
+		cout &lt;&lt; "key = " &lt;&lt; (*it).first &lt;&lt; " value = " &lt;&lt; it-&gt;second &lt;&lt; endl;
+	}
+	cout &lt;&lt; endl;
+}
 
 void test01()
 {
-	//查找
-	map<int, int> m;
-	m.insert(pair<int, int>(1, 10));
-	m.insert(pair<int, int>(2, 20));
-	m.insert(pair<int, int>(3, 30));
-	m.insert(pair<int, int>(3, 40));
+	//创建map容器
+	map&lt;int, int&gt; m;
 
-	map<int, int>::iterator pos = m.find(3);
+	//插入时按照key值进行排序
+	m.insert(pair&lt;int, int&gt;(1, 10));
+	m.insert(pair&lt;int, int&gt;(3, 30));
+	m.insert(pair&lt;int, int&gt;(2, 20));
+	m.insert(pair&lt;int, int&gt;(4, 40));
 
-	if (pos != m.end())
-	{
-		cout << "查到了元素 key = " << (*pos).first << " value = " << pos->second << endl;
-	}
-	else
-	{
-		cout << "未找到元素" << endl;
-	}
+	printMap(m);
 
-	//统计
-	//map不允许插入重复key 元素，对于count统计而言 结果要么是0 要么是1
-	//multimap的count统计可能大于1
-	int num = m.count(3);
-	cout << "num = " << num << endl;
+	//拷贝构造
+	map&lt;int, int&gt; m2(m);
+	printMap(m2);
 
+	//赋值
+	map&lt;int, int&gt; m3;
+	m3 = m2;
+	printMap(m3);
 }
 
 int main()
