--- a/notes/cpp/0191.html
+++ b/notes/cpp/0191.html
@@ -79,49 +79,37 @@
         </div>
         <hr>
         <!-- 正文 -->
-        <h1 class="code">66 谓词 - 二元谓词.cpp</h1>
+        <h1 class="code">62 map容器 - 排序.cpp</h1>
         <pre>
             <code class="code">
-#include<iostream>
+#include&lt;iostream&gt;
 using namespace std;
-#include<vector>
-#include<algorithm>
+#include&lt;map&gt;
 
-//二元谓词
 class MyCompare
 {
 public:
-	bool operator()(int val1, int val2) const
+	bool operator()(int v1, int v2) const
 	{
-		return val1 > val2;
+		//降序
+		return v1 &gt; v2;
 	}
 };
 
+//map容器 排序
 void test01()
 {
-	vector<int> v;
-	v.push_back(10);
-	v.push_back(40);
-	v.push_back(20);
-	v.push_back(30);
-	v.push_back(50);
+	map&lt;int, int, MyCompare&gt; m;
+	m.insert(make_pair(1, 10));
+	m.insert(make_pair(2, 20));
+	m.insert(make_pair(3, 30));
+	m.insert(make_pair(4, 40));
+	m.insert(make_pair(5, 50));
 
-	sort(v.begin(), v.end());
-	for (vector<int>::iterator it = v.begin(); it != v.end(); it++)
+	for (map&lt;int, int&gt;::iterator it = m.begin(); it != m.end(); it++)
 	{
-		cout << *it << " ";
+		cout &lt;&lt; "key = " &lt;&lt; it-&gt;first &lt;&lt; " value = " &lt;&lt; it-&gt;second &lt;&lt; endl;
 	}
-	cout << endl;
-
-	//使用函数对象 改变算法策略，排序规则变为从大到小
-	sort(v.begin(), v.end(), MyCompare());
-
-	cout << "-----------------------" << endl;
-	for (vector<int>::iterator it = v.begin(); it != v.end(); it++)
-	{
-		cout << *it << " ";
-	}
-	cout << endl;
 }
 
 int main()
