--- a/notes/cpp/0192.html
+++ b/notes/cpp/0192.html
@@ -79,42 +79,116 @@
         </div>
         <hr>
         <!-- 正文 -->
-        <h1 class="code">67 内建函数对象 - 算数仿函数.cpp</h1>
+        <h1 class="code">63 STL案例 - 员工分组.cpp</h1>
         <pre>
             <code class="code">
-#include<iostream>
+#include&lt;iostream&gt;
 using namespace std;
-#include<functional>
+#include&lt;vector&gt;
+#include&lt;string&gt;
+#include&lt;map&gt;
+#include&lt;ctime&gt;
 
-// plus			加法仿函数
-// minus		减法仿函数
-// multiplies	乘法仿函数
-// divides		除法仿函数
-// modulus		取模仿函数
-// negate		取反仿函数
+//-公司今天招聘了10个员工(ABCDEFGHIJ)，10名员工进入公司之后，需要指派员工在哪个部门工作
+//-员工信息有：姓名  工资组成；部门分为：策划、美术、研发
+//-随机给10名员工分配部门和工资
+//-通过multimap进行信息的插入   key(部门编号) value(员工)
+//-分部门显示员工信息
 
-//内建函数对象 算数仿函数
+#define CEHUA 0
+#define MEISHU 1
+#define YANFA 2
 
-//negate 一元仿函数 取反仿函数
-void test01()
+class Worker
 {
-	negate<int> n;
+public:
+	string m_Name;
+	int m_Salary;
+};
 
-	cout << n(50) << endl;;
+void createWorker(vector&lt;Worker&gt;& v)
+{
+	string nameSeed = "ABCDEFGHIJ";
+	for (int i = 0; i &lt; 10; ++i)
+	{
+		Worker worker;
+		worker.m_Name = "员工";
+		worker.m_Name += nameSeed[i];
+
+		worker.m_Salary = rand() % 10000 + 10000;  // 10000 ~ 19999
+		//将员工放入到容器中
+		v.push_back(worker);
+	}
 }
 
-//plus 二元仿函数 加法仿函数
-void test02()
+//员工分组
+void setGroup(vector&lt;Worker&gt;& v, multimap&lt;int, Worker&gt;& m)
 {
-	plus<int> p;
+	for (vector&lt;Worker&gt;::iterator it = v.begin(); it != v.end(); it++)
+	{
+		//产生随机部门编号
+		int deptId = rand() % 3;  // 0 1 2
 
-	cout << p(10, 20) << endl;
+		//将员工插入到分组中
+		//key部门编号，value具体员工
+		m.insert(make_pair(deptId, *it));
+	}
+}
+
+void showWorkerByGroup(multimap&lt;int, Worker&gt;& m)
+{
+	// 0 A B C   1 D E   2 F G ...
+	cout &lt;&lt; "策划部门: " &lt;&lt; endl;
+
+	multimap&lt;int, Worker&gt;::iterator pos = m.find(CEHUA);
+	int count = m.count(CEHUA);  //统计具体人数
+	int index = 0;
+	for (; pos != m.end() && index &lt; count; pos++, index++)
+	{
+		cout &lt;&lt; "姓名: " &lt;&lt; pos-&gt;second.m_Name &lt;&lt; " 工资: " &lt;&lt; pos-&gt;second.m_Salary &lt;&lt; endl;
+	}
+
+	cout &lt;&lt; "----------------------" &lt;&lt; endl;
+	cout &lt;&lt; "美术部门: " &lt;&lt; endl;
+	pos = m.find(MEISHU);
+	count = m.count(MEISHU);  //统计具体人数
+	index = 0;
+	for (; pos != m.end() && index &lt; count; pos++, index++)
+	{
+		cout &lt;&lt; "姓名: " &lt;&lt; pos-&gt;second.m_Name &lt;&lt; " 工资: " &lt;&lt; pos-&gt;second.m_Salary &lt;&lt; endl;
+	}
+
+	cout &lt;&lt; "----------------------" &lt;&lt; endl;
+	cout &lt;&lt; "研发部门: " &lt;&lt; endl;
+	pos = m.find(YANFA);
+	count = m.count(YANFA);  //统计具体人数
+	index = 0;
+	for (; pos != m.end() && index &lt; count; pos++, index++)
+	{
+		cout &lt;&lt; "姓名: " &lt;&lt; pos-&gt;second.m_Name &lt;&lt; " 工资: " &lt;&lt; pos-&gt;second.m_Salary &lt;&lt; endl;
+	}
 }
 
 int main()
 {
-	//test01();
-	test02();
+	srand((unsigned int)time(NULL));
+
+	//1.创建员工
+	vector&lt;Worker&gt; vWorker;
+	createWorker(vWorker);
+
+	//2.员工分组
+	multimap&lt;int, Worker&gt; mWorker;
+	setGroup(vWorker, mWorker);
+
+	//3.分组显示员工
+	showWorkerByGroup(mWorker);
+
+	//测试
+	//for (vector&lt;Worker&gt;::iterator it = vWorker.begin(); it != vWorker.end(); it++)
+	//{
+	//	cout &lt;&lt; "姓名: " &lt;&lt; it-&gt;m_Name &lt;&lt; " 工资: " &lt;&lt; it-&gt;m_Salary &lt;&lt; endl;
+	//}
 
 	return 0;
 }
