--- a/notes/cpp/0193.html
+++ b/notes/cpp/0193.html
@@ -79,64 +79,80 @@
         </div>
         <hr>
         <!-- 正文 -->
-        <h1 class="code">68 内建函数对象 - 关系仿函数.cpp</h1>
+        <h1 class="code">64 函数对象基本使用.cpp</h1>
         <pre>
             <code class="code">
-#include<iostream>
+#include&lt;iostream&gt;
 using namespace std;
-#include<vector>
-#include<algorithm>
-#include<functional>
+#include&lt;string&gt;
 
-// equal_to			等于
-// not_equal_to		不等于
-// greater			大于
-// greater_equal	大于等于
-// less				小于
-// less_equal		小于等于
+//函数对象(仿函数)
+//-函数对象在使用时，可以像普通函数那样调用，可以有参数，可以有返回值
+//-函数对象超出普通函数的概念，函数对象可以有自己的状态
+//-函数对象可以作为参数传递
 
-//内建函数对象 关系仿函数
-//大于 greater
-class MyCompare
+class MyAdd
 {
 public:
-	bool operator()(int v1, int v2)
+	int operator()(int v1, int v2)
 	{
-		return v1 > v2;
+		return v1 + v2;
 	}
 };
 
+//1.函数对象在使用时，可以像普通函数那样调用，可以有参数，可以有返回值
 void test01()
 {
-	vector<int> v;
+	MyAdd myAdd;
+	cout &lt;&lt; myAdd(10, 10) &lt;&lt; endl;
+}
 
-	v.push_back(10);
-	v.push_back(30);
-	v.push_back(40);
-	v.push_back(20);
-	v.push_back(50);
-
-	for (vector<int>::iterator it = v.begin(); it != v.end(); it++)
+//2.函数对象超出普通函数的概念，函数对象可以有自己的状态
+class MyPrint
+{
+public:
+	MyPrint()
 	{
-		cout << *it << " ";
+		this-&gt;count = 0;
 	}
-	cout << endl;
-
-	//降序
-	//sort(v.begin(), v.end(), MyCompare());
-	//greater<int>() 内建函数对象
-	sort(v.begin(), v.end(), greater<int>());
-	for (vector<int>::iterator it = v.begin(); it != v.end(); it++)
+	void operator()(string test)
 	{
-		cout << *it << " ";
+		cout &lt;&lt; test &lt;&lt; endl;
+		this-&gt;count++;
 	}
-	cout << endl;
 
+	int count;  // 内部自己状态
+};
+
+void test02()
+{
+	MyPrint myPrint;
+	myPrint("hello world");
+	myPrint("hello world");
+	myPrint("hello world");
+	myPrint("hello world");
+
+	cout &lt;&lt; "myPrint调用次数为: " &lt;&lt; myPrint.count &lt;&lt; endl;
+}
+
+//3.函数对象可以作为参数传递
+
+void doPrint(MyPrint& mp, string test)
+{
+	mp(test);
+}
+
+void test03()
+{
+	MyPrint myPrint;
+	doPrint(myPrint, "Hello C++");
 }
 
 int main()
 {
-	test01();
+	//test01();
+	//test02();
+	test03();
 
 	return 0;
 }
