--- a/notes/cpp/0194.html
+++ b/notes/cpp/0194.html
@@ -79,48 +79,45 @@
         </div>
         <hr>
         <!-- 正文 -->
-        <h1 class="code">69 内建函数对象 - 逻辑仿函数.cpp</h1>
+        <h1 class="code">65 谓词 - 一元谓词.cpp</h1>
         <pre>
             <code class="code">
-#include<iostream>
+#include&lt;iostream&gt;
 using namespace std;
-#include<vector>
-#include<algorithm>
-#include<functional>
+#include&lt;vector&gt;
+#include&lt;algorithm&gt;
 
-// logical_and		逻辑与
-// logical_or		逻辑或
-// logical_not		逻辑非
+//仿函数 返回值类型是bool数据类型，称为谓词
+//一元谓词
 
-//内建函数对象 逻辑仿函数
-//逻辑非 logical_not
+class GreaterFive
+{
+public:
+	bool operator()(int val) const
+	{
+		return val &gt; 5;
+	}
+};
 
 void test01()
 {
-	vector<bool> v;
-
-	v.push_back(true);
-	v.push_back(false);
-	v.push_back(true);
-	v.push_back(false);
-
-	for (vector<bool>::iterator it = v.begin(); it != v.end(); it++)
+	vector&lt;int&gt; v;
+	for (int i = 0; i &lt; 10; i++)
 	{
-		cout << *it << " ";
+		v.push_back(i);
 	}
-	cout << endl;
 
-	//利用逻辑非 将容器v搬运到容器v2中，并执行取反操作
-	vector<bool> v2;
-	v2.resize(v.size());  //不开辟空间无法搬运
-
-	transform(v.begin(), v.end(), v2.begin(), logical_not<bool>());
-
-	for (vector<bool>::iterator it = v2.begin(); it != v2.end(); it++)
+	//查找容器中 有没有大于5的数字
+	//GreaterFive() 匿名函数对象
+	vector&lt;int&gt;::iterator it = find_if(v.begin(), v.end(), GreaterFive());
+	if (it == v.end())
 	{
-		cout << *it << " ";
+		cout &lt;&lt; "未找到" &lt;&lt; endl;
 	}
-	cout << endl;
+	else
+	{
+		cout &lt;&lt; "找到了大于5的数字为: " &lt;&lt; *it &lt;&lt; endl;
+	}
 }
 
 int main()
