--- a/notes/cpp/0195.html
+++ b/notes/cpp/0195.html
@@ -79,45 +79,49 @@
         </div>
         <hr>
         <!-- 正文 -->
-        <h1 class="code">70 常用遍历算法 - for_each.cpp</h1>
+        <h1 class="code">66 谓词 - 二元谓词.cpp</h1>
         <pre>
             <code class="code">
-#include<iostream>
+#include&lt;iostream&gt;
 using namespace std;
-#include<vector>
-#include<algorithm>
+#include&lt;vector&gt;
+#include&lt;algorithm&gt;
 
-//常用遍历算法 for_each
-
-//普通函数
-void print01(int val)
-{
-	cout << val << " ";
-}
-
-//仿函数
-class print02
+//二元谓词
+class MyCompare
 {
 public:
-	void operator()(int val)
+	bool operator()(int val1, int val2) const
 	{
-		cout << val << " ";
+		return val1 &gt; val2;
 	}
 };
 
 void test01()
 {
-	vector<int> v;
-	for (int i = 0; i < 10; i++)
+	vector&lt;int&gt; v;
+	v.push_back(10);
+	v.push_back(40);
+	v.push_back(20);
+	v.push_back(30);
+	v.push_back(50);
+
+	sort(v.begin(), v.end());
+	for (vector&lt;int&gt;::iterator it = v.begin(); it != v.end(); it++)
 	{
-		v.push_back(i);
+		cout &lt;&lt; *it &lt;&lt; " ";
 	}
+	cout &lt;&lt; endl;
 
-	for_each(v.begin(), v.end(), print01);
-	cout << endl;
+	//使用函数对象 改变算法策略，排序规则变为从大到小
+	sort(v.begin(), v.end(), MyCompare());
 
-	for_each(v.begin(), v.end(), print02());
-	cout << endl;
+	cout &lt;&lt; "-----------------------" &lt;&lt; endl;
+	for (vector&lt;int&gt;::iterator it = v.begin(); it != v.end(); it++)
+	{
+		cout &lt;&lt; *it &lt;&lt; " ";
+	}
+	cout &lt;&lt; endl;
 }
 
 int main()
