--- a/notes/cpp/0197.html
+++ b/notes/cpp/0197.html
@@ -79,97 +79,64 @@
         </div>
         <hr>
         <!-- 正文 -->
-        <h1 class="code">72 常用查找算法 - find.cpp</h1>
+        <h1 class="code">68 内建函数对象 - 关系仿函数.cpp</h1>
         <pre>
             <code class="code">
-#include<iostream>
+#include&lt;iostream&gt;
 using namespace std;
-#include<vector>
-#include<algorithm>
-#include<string>
+#include&lt;vector&gt;
+#include&lt;algorithm&gt;
+#include&lt;functional&gt;
 
-//常用查找算法
-//find
+// equal_to			等于
+// not_equal_to		不等于
+// greater			大于
+// greater_equal	大于等于
+// less				小于
+// less_equal		小于等于
 
-//查找 内置数据类型
-void test01()
-{
-	vector<int> v;
-	for (int i = 0; i < 10; i++)
-	{
-		v.push_back(i);
-	}
-
-	//查找 容器中 是否有 5 这个元素
-	vector<int>::iterator it = find(v.begin(), v.end(), 5);
-	if (it == v.end())
-	{
-		cout << "没有找到!" << endl;
-	}
-	else
-	{
-		cout << "找到: " << *it << endl;
-	}
-}
-
-class Person
+//内建函数对象 关系仿函数
+//大于 greater
+class MyCompare
 {
 public:
-	Person(string name, int age)
+	bool operator()(int v1, int v2)
 	{
-		this->m_Name = name;
-		this->m_Age = age;
+		return v1 &gt; v2;
 	}
-
-	//重载 == 让底层find知道如何对比Person数据类型
-	bool operator==(const Person& p)
-	{
-		if (this->m_Name == p.m_Name && this->m_Age == p.m_Age)
-		{
-			return true;
-		}
-		else
-		{
-			return false;
-		}
-	}
-	string m_Name;
-	int m_Age;
 };
 
-//查找 自定义数据类型
-void test02()
+void test01()
 {
-	vector<Person> v;
-	//创建数据
-	Person p1("aaa", 10);
-	Person p2("bbb", 20);
-	Person p3("ccc", 30);
-	Person p4("ddd", 40);
+	vector&lt;int&gt; v;
 
-	Person pp("bbb", 20);
+	v.push_back(10);
+	v.push_back(30);
+	v.push_back(40);
+	v.push_back(20);
+	v.push_back(50);
 
-	//放入到容器中
-	v.push_back(p1);
-	v.push_back(p2);
-	v.push_back(p3);
-	v.push_back(p4);
-
-	vector<Person>::iterator it = find(v.begin(), v.end(), pp);
-	if (it == v.end())
+	for (vector&lt;int&gt;::iterator it = v.begin(); it != v.end(); it++)
 	{
-		cout << "没有找到" << endl;
+		cout &lt;&lt; *it &lt;&lt; " ";
 	}
-	else
+	cout &lt;&lt; endl;
+
+	//降序
+	//sort(v.begin(), v.end(), MyCompare());
+	//greater&lt;int&gt;() 内建函数对象
+	sort(v.begin(), v.end(), greater&lt;int&gt;());
+	for (vector&lt;int&gt;::iterator it = v.begin(); it != v.end(); it++)
 	{
-		cout << "找到元素  姓名: " << it->m_Name << " 年龄: " << it->m_Age << endl;
+		cout &lt;&lt; *it &lt;&lt; " ";
 	}
+	cout &lt;&lt; endl;
+
 }
 
 int main()
 {
-	//test01();
-	test02();
+	test01();
 
 	return 0;
 }
