--- a/notes/cpp/0198.html
+++ b/notes/cpp/0198.html
@@ -79,99 +79,53 @@
         </div>
         <hr>
         <!-- 正文 -->
-        <h1 class="code">73 常用查找算法 - find_if.cpp</h1>
+        <h1 class="code">69 内建函数对象 - 逻辑仿函数.cpp</h1>
         <pre>
             <code class="code">
-#include<iostream>
+#include&lt;iostream&gt;
 using namespace std;
-#include<vector>
-#include<algorithm>
-#include<string>
+#include&lt;vector&gt;
+#include&lt;algorithm&gt;
+#include&lt;functional&gt;
 
-//常用查找算法 find_if
+// logical_and		逻辑与
+// logical_or		逻辑或
+// logical_not		逻辑非
 
-//1.查找内置数据类型
-class GreaterFive
-{
-public:
-	bool operator()(int val)
-	{
-		return val > 5;
-	}
-};
+//内建函数对象 逻辑仿函数
+//逻辑非 logical_not
 
 void test01()
 {
-	vector<int> v;
-	for (int i = 0; i < 10; i++)
-	{
-		v.push_back(i);
-	}
+	vector&lt;bool&gt; v;
 
-	vector<int>::iterator it = find_if(v.begin(), v.end(), GreaterFive());
-	if (it == v.end())
-	{
-		cout << "没有找到" << endl;
-	}
-	else
-	{
-		cout << "找到大于5的数字为: " << *it << endl;
-	}
-}
+	v.push_back(true);
+	v.push_back(false);
+	v.push_back(true);
+	v.push_back(false);
 
-//2.查找自定义数据类型
-class Person
-{
-public:
-	Person(string name, int age)
+	for (vector&lt;bool&gt;::iterator it = v.begin(); it != v.end(); it++)
 	{
-		this->m_Name = name;
-		this->m_Age = age;
+		cout &lt;&lt; *it &lt;&lt; " ";
 	}
-	string m_Name;
-	int m_Age;
-};
+	cout &lt;&lt; endl;
 
-class Greater20
-{
-public:
-	bool operator()(Person& p)
+	//利用逻辑非 将容器v搬运到容器v2中，并执行取反操作
+	vector&lt;bool&gt; v2;
+	v2.resize(v.size());  //不开辟空间无法搬运
+
+	transform(v.begin(), v.end(), v2.begin(), logical_not&lt;bool&gt;());
+
+	for (vector&lt;bool&gt;::iterator it = v2.begin(); it != v2.end(); it++)
 	{
-		return p.m_Age > 20;
+		cout &lt;&lt; *it &lt;&lt; " ";
 	}
-};
-
-void test02()
-{
-	vector<Person> v;
-
-	//创建数据
-	Person p1("aaa", 10);
-	Person p2("bbb", 20);
-	Person p3("ccc", 30);
-	Person p4("ddd", 40);
-
-	v.push_back(p1);
-	v.push_back(p2);
-	v.push_back(p3);
-	v.push_back(p4);
-
-	//找年龄大于20的人
-	vector<Person>::iterator it = find_if(v.begin(), v.end(), Greater20());
-	if (it == v.end())
-	{
-		cout << "没有找到" << endl;
-	}
-	else
-	{
-		cout << "找到 姓名: " << it->m_Name << " 年龄: " << it->m_Age << endl;
-	}
+	cout &lt;&lt; endl;
 }
 
 int main()
 {
-	//test01();
-	test02();
+	test01();
 
 	return 0;
 }
