--- a/notes/cpp/0199.html
+++ b/notes/cpp/0199.html
@@ -79,35 +79,45 @@
         </div>
         <hr>
         <!-- 正文 -->
-        <h1 class="code">74 常用查找算法 - adjacent_find.cpp</h1>
+        <h1 class="code">70 常用遍历算法 - for_each.cpp</h1>
         <pre>
             <code class="code">
-#include<iostream>
+#include&lt;iostream&gt;
 using namespace std;
-#include<vector>
-#include<algorithm>
+#include&lt;vector&gt;
+#include&lt;algorithm&gt;
 
-//常用查找算法 adjacent_find
+//常用遍历算法 for_each
+
+//普通函数
+void print01(int val)
+{
+	cout &lt;&lt; val &lt;&lt; " ";
+}
+
+//仿函数
+class print02
+{
+public:
+	void operator()(int val)
+	{
+		cout &lt;&lt; val &lt;&lt; " ";
+	}
+};
+
 void test01()
 {
-	vector<int> v;
-	v.push_back(0);
-	v.push_back(2);
-	v.push_back(0);
-	v.push_back(3);
-	v.push_back(1);
-	v.push_back(4);
-	v.push_back(3);
+	vector&lt;int&gt; v;
+	for (int i = 0; i &lt; 10; i++)
+	{
+		v.push_back(i);
+	}
 
-	vector<int>::iterator pos = adjacent_find(v.begin(), v.end());
-	if (pos == v.end())
-	{
-		cout << "未找到相邻重复元素" << endl;
-	}
-	else
-	{
-		cout << "找到相邻重复元素: " << *pos << endl;
-	}
+	for_each(v.begin(), v.end(), print01);
+	cout &lt;&lt; endl;
+
+	for_each(v.begin(), v.end(), print02());
+	cout &lt;&lt; endl;
 }
 
 int main()
