--- a/notes/cpp/0201.html
+++ b/notes/cpp/0201.html
@@ -79,49 +79,52 @@
         </div>
         <hr>
         <!-- 正文 -->
-        <h1 class="code">76 常用查找算法 - count.cpp</h1>
+        <h1 class="code">72 常用查找算法 - find.cpp</h1>
         <pre>
             <code class="code">
-#include<iostream>
+#include&lt;iostream&gt;
 using namespace std;
-#include<vector>
-#include<algorithm>
-#include<string>
+#include&lt;vector&gt;
+#include&lt;algorithm&gt;
+#include&lt;string&gt;
 
-//常用查找算法 count
+//常用查找算法
+//find
 
-//1.统计内置数据据类型
-
+//查找 内置数据类型
 void test01()
 {
-	vector<int> v;
+	vector&lt;int&gt; v;
+	for (int i = 0; i &lt; 10; i++)
+	{
+		v.push_back(i);
+	}
 
-	v.push_back(10);
-	v.push_back(40);
-	v.push_back(30);
-	v.push_back(40);
-	v.push_back(20);
-	v.push_back(40);
-
-	int num = count(v.begin(), v.end(), 40);
-
-	cout << "40的元素个数为: " << num << endl;
+	//查找 容器中 是否有 5 这个元素
+	vector&lt;int&gt;::iterator it = find(v.begin(), v.end(), 5);
+	if (it == v.end())
+	{
+		cout &lt;&lt; "没有找到!" &lt;&lt; endl;
+	}
+	else
+	{
+		cout &lt;&lt; "找到: " &lt;&lt; *it &lt;&lt; endl;
+	}
 }
-
-//2.统计自定义数据类型
 
 class Person
 {
 public:
 	Person(string name, int age)
 	{
-		this->m_Name = name;
-		this->m_Age = age;
+		this-&gt;m_Name = name;
+		this-&gt;m_Age = age;
 	}
 
-	bool operator==(const Person& p)  //必须加const
+	//重载 == 让底层find知道如何对比Person数据类型
+	bool operator==(const Person& p)
 	{
-		if (this->m_Age == p.m_Age)
+		if (this-&gt;m_Name == p.m_Name && this-&gt;m_Age == p.m_Age)
 		{
 			return true;
 		}
@@ -130,33 +133,37 @@ public:
 			return false;
 		}
 	}
-
 	string m_Name;
 	int m_Age;
 };
 
+//查找 自定义数据类型
 void test02()
 {
-	vector<Person> v;
+	vector&lt;Person&gt; v;
+	//创建数据
+	Person p1("aaa", 10);
+	Person p2("bbb", 20);
+	Person p3("ccc", 30);
+	Person p4("ddd", 40);
 
-	Person p1("刘备", 35);
-	Person p2("关羽", 35);
-	Person p3("张飞", 35);
-	Person p4("赵云", 30);
-	Person p5("曹操", 40);
+	Person pp("bbb", 20);
 
-	//将人员插入到容器中
+	//放入到容器中
 	v.push_back(p1);
 	v.push_back(p2);
 	v.push_back(p3);
 	v.push_back(p4);
-	v.push_back(p5);
 
-	Person p("诸葛亮", 35);
-
-	int num = count(v.begin(), v.end(), p);
-
-	cout << "和诸葛亮同岁的人员个数为: " << num << endl;
+	vector&lt;Person&gt;::iterator it = find(v.begin(), v.end(), pp);
+	if (it == v.end())
+	{
+		cout &lt;&lt; "没有找到" &lt;&lt; endl;
+	}
+	else
+	{
+		cout &lt;&lt; "找到元素  姓名: " &lt;&lt; it-&gt;m_Name &lt;&lt; " 年龄: " &lt;&lt; it-&gt;m_Age &lt;&lt; endl;
+	}
 }
 
 int main()
