--- a/notes/cpp/0202.html
+++ b/notes/cpp/0202.html
@@ -79,83 +79,93 @@
         </div>
         <hr>
         <!-- 正文 -->
-        <h1 class="code">77 常用查找算法 - count_if.cpp</h1>
+        <h1 class="code">73 常用查找算法 - find_if.cpp</h1>
         <pre>
             <code class="code">
-#include<iostream>
+#include&lt;iostream&gt;
 using namespace std;
-#include<vector>
-#include<algorithm>
-#include<string>
+#include&lt;vector&gt;
+#include&lt;algorithm&gt;
+#include&lt;string&gt;
 
-//常用查找算法 count_if
+//常用查找算法 find_if
 
-//统计内置数据类型
-class Greater20
+//1.查找内置数据类型
+class GreaterFive
 {
 public:
 	bool operator()(int val)
 	{
-		return val > 20;
+		return val &gt; 5;
 	}
 };
 
 void test01()
 {
-	vector<int> v;
-	v.push_back(10);
-	v.push_back(40);
-	v.push_back(30);
-	v.push_back(20);
-	v.push_back(40);
-	v.push_back(20);
+	vector&lt;int&gt; v;
+	for (int i = 0; i &lt; 10; i++)
+	{
+		v.push_back(i);
+	}
 
-	int num = count_if(v.begin(), v.end(), Greater20());
-	
-	cout << "大于20的元素的个数为: " << num << endl;
+	vector&lt;int&gt;::iterator it = find_if(v.begin(), v.end(), GreaterFive());
+	if (it == v.end())
+	{
+		cout &lt;&lt; "没有找到" &lt;&lt; endl;
+	}
+	else
+	{
+		cout &lt;&lt; "找到大于5的数字为: " &lt;&lt; *it &lt;&lt; endl;
+	}
 }
 
+//2.查找自定义数据类型
 class Person
 {
 public:
 	Person(string name, int age)
 	{
-		this->m_Name = name;
-		this->m_Age = age;
+		this-&gt;m_Name = name;
+		this-&gt;m_Age = age;
 	}
 	string m_Name;
 	int m_Age;
 };
 
-class AgeGreater20
+class Greater20
 {
 public:
-	bool operator()(const Person& p)
+	bool operator()(Person& p)
 	{
-		return p.m_Age > 20;
+		return p.m_Age &gt; 20;
 	}
 };
 
-//统计自定义数据类型
 void test02()
 {
-	vector<Person> v;
+	vector&lt;Person&gt; v;
 
-	Person p1("刘备", 35);
-	Person p2("关羽", 35);
-	Person p3("张飞", 35);
-	Person p4("赵云", 40);
-	Person p5("曹操", 20);
+	//创建数据
+	Person p1("aaa", 10);
+	Person p2("bbb", 20);
+	Person p3("ccc", 30);
+	Person p4("ddd", 40);
 
 	v.push_back(p1);
 	v.push_back(p2);
 	v.push_back(p3);
 	v.push_back(p4);
-	v.push_back(p5);
 
-	//统计  大于20岁人员个数
-	int num = count_if(v.begin(), v.end(), AgeGreater20());
-	cout << "大于20岁的人员的个数为: " << num << endl;
+	//找年龄大于20的人
+	vector&lt;Person&gt;::iterator it = find_if(v.begin(), v.end(), Greater20());
+	if (it == v.end())
+	{
+		cout &lt;&lt; "没有找到" &lt;&lt; endl;
+	}
+	else
+	{
+		cout &lt;&lt; "找到 姓名: " &lt;&lt; it-&gt;m_Name &lt;&lt; " 年龄: " &lt;&lt; it-&gt;m_Age &lt;&lt; endl;
+	}
 }
 
 int main()
