--- a/notes/cpp/0203.html
+++ b/notes/cpp/0203.html
@@ -79,39 +79,35 @@
         </div>
         <hr>
         <!-- 正文 -->
-        <h1 class="code">78 常用排序算法 - sort.cpp</h1>
+        <h1 class="code">74 常用查找算法 - adjacent_find.cpp</h1>
         <pre>
             <code class="code">
-#include<iostream>
+#include&lt;iostream&gt;
 using namespace std;
-#include<vector>
-#include<algorithm>
-#include<functional>
+#include&lt;vector&gt;
+#include&lt;algorithm&gt;
 
-//常用排序算法 sort
-void myPrint(int val)
-{
-	cout << val << " ";
-}
+//常用查找算法 adjacent_find
 void test01()
 {
-	vector<int> v;
+	vector&lt;int&gt; v;
+	v.push_back(0);
+	v.push_back(2);
+	v.push_back(0);
+	v.push_back(3);
+	v.push_back(1);
+	v.push_back(4);
+	v.push_back(3);
 
-	v.push_back(10);
-	v.push_back(30);
-	v.push_back(50);
-	v.push_back(20);
-	v.push_back(40);
-
-	//利用sort进行升序
-	sort(v.begin(), v.end());
-	for_each(v.begin(), v.end(), myPrint);
-	cout << endl;
-
-	//改变为 降序
-	sort(v.begin(), v.end(), greater<int>());
-	for_each(v.begin(), v.end(), myPrint);
-	cout << endl;
+	vector&lt;int&gt;::iterator pos = adjacent_find(v.begin(), v.end());
+	if (pos == v.end())
+	{
+		cout &lt;&lt; "未找到相邻重复元素" &lt;&lt; endl;
+	}
+	else
+	{
+		cout &lt;&lt; "找到相邻重复元素: " &lt;&lt; *pos &lt;&lt; endl;
+	}
 }
 
 int main()
