--- a/notes/cpp/0204.html
+++ b/notes/cpp/0204.html
@@ -79,36 +79,34 @@
         </div>
         <hr>
         <!-- 正文 -->
-        <h1 class="code">79 常用排序算法 - random_shuffle.cpp</h1>
+        <h1 class="code">75 常用查找算法 - binary_search.cpp</h1>
         <pre>
             <code class="code">
-#include<iostream>
+#include&lt;iostream&gt;
 using namespace std;
-#include<vector>
-#include<algorithm>
-#include<ctime>
+#include&lt;vector&gt;
+#include&lt;algorithm&gt;
 
-//常用排序算法 random_shuffle
-
-void myPrint(int val)
-{
-	cout << val << " ";
-}
-
+//常用查找算法 binary_search
 void test01()
 {
-	srand((unsigned int)time(NULL));
-
-	vector<int> v;
-	for (int i = 0; i < 10; i++)
+	vector&lt;int&gt; v;
+	for (int i = 0; i &lt; 10; i++)
 	{
 		v.push_back(i);
 	}
-
-	//利用洗牌 算法 打乱顺序
-	random_shuffle(v.begin(), v.end());
-	for_each(v.begin(), v.end(), myPrint);
-	cout << endl;
+	//v.push_back(2);  //如果是无序序列，结果未知
+	//查找容器中是否有元素 9
+	//主义：容器必须是有序的序列
+	bool ret = binary_search(v.begin(), v.end(), 9);
+	if (ret)
+	{
+		cout &lt;&lt; "找到了元素" &lt;&lt; endl;
+	}
+	else
+	{
+		cout &lt;&lt; "未找到" &lt;&lt; endl;
+	}
 }
 
 int main()
