--- a/notes/cpp/0205.html
+++ b/notes/cpp/0205.html
@@ -79,45 +79,90 @@
         </div>
         <hr>
         <!-- 正文 -->
-        <h1 class="code">80 常用排序算法 - merge.cpp</h1>
+        <h1 class="code">76 常用查找算法 - count.cpp</h1>
         <pre>
             <code class="code">
-#include<iostream>
+#include&lt;iostream&gt;
 using namespace std;
-#include<vector>
-#include<algorithm>
+#include&lt;vector&gt;
+#include&lt;algorithm&gt;
+#include&lt;string&gt;
 
-void myPrint(int val)
-{
-	cout << val << " ";
-}
+//常用查找算法 count
 
-//常用排序算法 merge
+//1.统计内置数据据类型
+
 void test01()
 {
-	vector<int> v1;
-	vector<int> v2;
+	vector&lt;int&gt; v;
 
-	for (int i = 0; i < 10; i++)
+	v.push_back(10);
+	v.push_back(40);
+	v.push_back(30);
+	v.push_back(40);
+	v.push_back(20);
+	v.push_back(40);
+
+	int num = count(v.begin(), v.end(), 40);
+
+	cout &lt;&lt; "40的元素个数为: " &lt;&lt; num &lt;&lt; endl;
+}
+
+//2.统计自定义数据类型
+
+class Person
+{
+public:
+	Person(string name, int age)
 	{
-		v1.push_back(i);
-		v1.push_back(i + 1);
+		this-&gt;m_Name = name;
+		this-&gt;m_Age = age;
 	}
 
-	//目标容器
-	vector<int> vTarget;
+	bool operator==(const Person& p)  //必须加const
+	{
+		if (this-&gt;m_Age == p.m_Age)
+		{
+			return true;
+		}
+		else
+		{
+			return false;
+		}
+	}
 
-	//提前给目标容器分配空间
-	vTarget.resize(v1.size() + v2.size());
+	string m_Name;
+	int m_Age;
+};
 
-	merge(v1.begin(), v1.end(), v2.begin(), v2.end(), vTarget.begin());
-	for_each(vTarget.begin(), vTarget.end(), myPrint);
-	cout << endl;
+void test02()
+{
+	vector&lt;Person&gt; v;
+
+	Person p1("刘备", 35);
+	Person p2("关羽", 35);
+	Person p3("张飞", 35);
+	Person p4("赵云", 30);
+	Person p5("曹操", 40);
+
+	//将人员插入到容器中
+	v.push_back(p1);
+	v.push_back(p2);
+	v.push_back(p3);
+	v.push_back(p4);
+	v.push_back(p5);
+
+	Person p("诸葛亮", 35);
+
+	int num = count(v.begin(), v.end(), p);
+
+	cout &lt;&lt; "和诸葛亮同岁的人员个数为: " &lt;&lt; num &lt;&lt; endl;
 }
 
 int main()
 {
-	test01();
+	//test01();
+	test02();
 
 	return 0;
 }
