--- a/notes/cpp/0206.html
+++ b/notes/cpp/0206.html
@@ -79,41 +79,89 @@
         </div>
         <hr>
         <!-- 正文 -->
-        <h1 class="code">81 常用排序算法 - reverse.cpp</h1>
+        <h1 class="code">77 常用查找算法 - count_if.cpp</h1>
         <pre>
             <code class="code">
-#include<iostream>
+#include&lt;iostream&gt;
 using namespace std;
-#include<vector>
-#include<algorithm>
+#include&lt;vector&gt;
+#include&lt;algorithm&gt;
+#include&lt;string&gt;
 
-//常用排序算法 reverse
-void myPrint(int val)
+//常用查找算法 count_if
+
+//统计内置数据类型
+class Greater20
 {
-	cout << val << " ";
-}
+public:
+	bool operator()(int val)
+	{
+		return val &gt; 20;
+	}
+};
+
 void test01()
 {
-	vector<int> v;
+	vector&lt;int&gt; v;
 	v.push_back(10);
+	v.push_back(40);
 	v.push_back(30);
-	v.push_back(50);
 	v.push_back(20);
 	v.push_back(40);
+	v.push_back(20);
 
-	cout << "反转前: " << endl;
-	for_each(v.begin(), v.end(), myPrint);
-	cout << endl;
+	int num = count_if(v.begin(), v.end(), Greater20());
+	
+	cout &lt;&lt; "大于20的元素的个数为: " &lt;&lt; num &lt;&lt; endl;
+}
 
-	cout << "反转后: " << endl;
-	reverse(v.begin(), v.end());
-	for_each(v.begin(), v.end(), myPrint);
-	cout << endl;
+class Person
+{
+public:
+	Person(string name, int age)
+	{
+		this-&gt;m_Name = name;
+		this-&gt;m_Age = age;
+	}
+	string m_Name;
+	int m_Age;
+};
+
+class AgeGreater20
+{
+public:
+	bool operator()(const Person& p)
+	{
+		return p.m_Age &gt; 20;
+	}
+};
+
+//统计自定义数据类型
+void test02()
+{
+	vector&lt;Person&gt; v;
+
+	Person p1("刘备", 35);
+	Person p2("关羽", 35);
+	Person p3("张飞", 35);
+	Person p4("赵云", 40);
+	Person p5("曹操", 20);
+
+	v.push_back(p1);
+	v.push_back(p2);
+	v.push_back(p3);
+	v.push_back(p4);
+	v.push_back(p5);
+
+	//统计  大于20岁人员个数
+	int num = count_if(v.begin(), v.end(), AgeGreater20());
+	cout &lt;&lt; "大于20岁的人员的个数为: " &lt;&lt; num &lt;&lt; endl;
 }
 
 int main()
 {
-	test01();
+	//test01();
+	test02();
 
 	return 0;
 }
