--- a/notes/cpp/0208.html
+++ b/notes/cpp/0208.html
@@ -79,45 +79,36 @@
         </div>
         <hr>
         <!-- 正文 -->
-        <h1 class="code">83 常用拷贝和替换算法 - replace.cpp</h1>
+        <h1 class="code">79 常用排序算法 - random_shuffle.cpp</h1>
         <pre>
             <code class="code">
-#include<iostream>
+#include&lt;iostream&gt;
 using namespace std;
-#include<vector>
-#include<algorithm>
+#include&lt;vector&gt;
+#include&lt;algorithm&gt;
+#include&lt;ctime&gt;
 
-class MyPrint
+//常用排序算法 random_shuffle
+
+void myPrint(int val)
 {
-public:
-	void operator()(int val)
-	{
-		cout << val << " ";
-	}
-};
+	cout &lt;&lt; val &lt;&lt; " ";
+}
 
-//常用拷贝和替换算法 replace
 void test01()
 {
-	vector<int> v;
-	v.push_back(20);
-	v.push_back(30);
-	v.push_back(50);
-	v.push_back(30);
-	v.push_back(40);
-	v.push_back(20);
-	v.push_back(10);
-	v.push_back(20);
+	srand((unsigned int)time(NULL));
 
-	cout << "替换前: " << endl;
-	for_each(v.begin(), v.end(), MyPrint());
-	cout << endl;
+	vector&lt;int&gt; v;
+	for (int i = 0; i &lt; 10; i++)
+	{
+		v.push_back(i);
+	}
 
-	//将20 替换为 2000
-	replace(v.begin(), v.end(), 20, 2000);
-	cout << "替换后: " << endl;
-	for_each(v.begin(), v.end(), MyPrint());
-	cout << endl;
+	//利用洗牌 算法 打乱顺序
+	random_shuffle(v.begin(), v.end());
+	for_each(v.begin(), v.end(), myPrint);
+	cout &lt;&lt; endl;
 }
 
 int main()
