--- a/notes/cpp/0209.html
+++ b/notes/cpp/0209.html
@@ -79,54 +79,40 @@
         </div>
         <hr>
         <!-- 正文 -->
-        <h1 class="code">84 常用拷贝和替换算法 - replace_if.cpp</h1>
+        <h1 class="code">80 常用排序算法 - merge.cpp</h1>
         <pre>
             <code class="code">
-#include<iostream>
+#include&lt;iostream&gt;
 using namespace std;
-#include<vector>
-#include<algorithm>
+#include&lt;vector&gt;
+#include&lt;algorithm&gt;
 
-class MyPrint
+void myPrint(int val)
 {
-public:
-	void operator()(int val)
-	{
-		cout << val << " ";
-	}
-};
+	cout &lt;&lt; val &lt;&lt; " ";
+}
 
-class Greater30
-{
-public:
-	bool operator()(int val)
-	{
-		return val >= 30;
-	}
-};
-
-//常用拷贝和替换算法 replace_if
+//常用排序算法 merge
 void test01()
 {
-	vector<int> v;
-	v.push_back(10);
-	v.push_back(40);
-	v.push_back(20);
-	v.push_back(40);
-	v.push_back(30);
-	v.push_back(50);
-	v.push_back(20);
-	v.push_back(30);
+	vector&lt;int&gt; v1;
+	vector&lt;int&gt; v2;
 
-	cout << "替换前: " << endl;
-	for_each(v.begin(), v.end(), MyPrint());
-	cout << endl;
+	for (int i = 0; i &lt; 10; i++)
+	{
+		v1.push_back(i);
+		v1.push_back(i + 1);
+	}
 
-	//将大于等于30的 替换为 3000
-	replace_if(v.begin(), v.end(), Greater30(), 3000);
-	cout << "替换后: " << endl;
-	for_each(v.begin(), v.end(), MyPrint());
-	cout << endl;
+	//目标容器
+	vector&lt;int&gt; vTarget;
+
+	//提前给目标容器分配空间
+	vTarget.resize(v1.size() + v2.size());
+
+	merge(v1.begin(), v1.end(), v2.begin(), v2.end(), vTarget.begin());
+	for_each(vTarget.begin(), vTarget.end(), myPrint);
+	cout &lt;&lt; endl;
 }
 
 int main()
