--- a/notes/cpp/0210.html
+++ b/notes/cpp/0210.html
@@ -79,45 +79,36 @@
         </div>
         <hr>
         <!-- 正文 -->
-        <h1 class="code">85 常用拷贝和替换算法 - swap.cpp</h1>
+        <h1 class="code">81 常用排序算法 - reverse.cpp</h1>
         <pre>
             <code class="code">
-#include<iostream>
+#include&lt;iostream&gt;
 using namespace std;
-#include<vector>
-#include<algorithm>
+#include&lt;vector&gt;
+#include&lt;algorithm&gt;
 
-//常用拷贝和替换算法 swap
+//常用排序算法 reverse
 void myPrint(int val)
 {
-	cout << val << " ";
+	cout &lt;&lt; val &lt;&lt; " ";
 }
 void test01()
 {
-	vector<int> v1;
-	vector<int> v2;
+	vector&lt;int&gt; v;
+	v.push_back(10);
+	v.push_back(30);
+	v.push_back(50);
+	v.push_back(20);
+	v.push_back(40);
 
-	for (int i = 0; i < 10; i++)
-	{
-		v1.push_back(i);
-		v2.push_back(i + 100);
-	}
+	cout &lt;&lt; "反转前: " &lt;&lt; endl;
+	for_each(v.begin(), v.end(), myPrint);
+	cout &lt;&lt; endl;
 
-	cout << "交换前: " << endl;
-	for_each(v1.begin(), v1.end(), myPrint);
-	cout << endl;
-	for_each(v2.begin(), v2.end(), myPrint);
-	cout << endl;
-
-	cout << "-----------------" << endl;
-	cout << "交换后: " << endl;
-
-	swap(v1, v2);
-	
-	for_each(v1.begin(), v1.end(), myPrint);
-	cout << endl;
-	for_each(v2.begin(), v2.end(), myPrint);
-	cout << endl;
+	cout &lt;&lt; "反转后: " &lt;&lt; endl;
+	reverse(v.begin(), v.end());
+	for_each(v.begin(), v.end(), myPrint);
+	cout &lt;&lt; endl;
 }
 
 int main()
