--- a/notes/cpp/0212.html
+++ b/notes/cpp/0212.html
@@ -79,30 +79,45 @@
         </div>
         <hr>
         <!-- 正文 -->
-        <h1 class="code">87 常用算术生成算法 - fill.cpp</h1>
+        <h1 class="code">83 常用拷贝和替换算法 - replace.cpp</h1>
         <pre>
             <code class="code">
-#include<iostream>
+#include&lt;iostream&gt;
 using namespace std;
-#include<vector>
-#include<numeric>
-#include<algorithm>
+#include&lt;vector&gt;
+#include&lt;algorithm&gt;
 
-//常用算术生成算法 fill
-void myPrint(int val)
+class MyPrint
 {
-	cout << val << " ";
-}
+public:
+	void operator()(int val)
+	{
+		cout &lt;&lt; val &lt;&lt; " ";
+	}
+};
+
+//常用拷贝和替换算法 replace
 void test01()
 {
-	vector<int> v;
-	v.resize(10);
+	vector&lt;int&gt; v;
+	v.push_back(20);
+	v.push_back(30);
+	v.push_back(50);
+	v.push_back(30);
+	v.push_back(40);
+	v.push_back(20);
+	v.push_back(10);
+	v.push_back(20);
 
-	//后期重新填充
-	fill(v.begin(), v.end(), 100);
+	cout &lt;&lt; "替换前: " &lt;&lt; endl;
+	for_each(v.begin(), v.end(), MyPrint());
+	cout &lt;&lt; endl;
 
-	for_each(v.begin(), v.end(), myPrint);
-	cout << endl;
+	//将20 替换为 2000
+	replace(v.begin(), v.end(), 20, 2000);
+	cout &lt;&lt; "替换后: " &lt;&lt; endl;
+	for_each(v.begin(), v.end(), MyPrint());
+	cout &lt;&lt; endl;
 }
 
 int main()
