--- a/notes/cpp/0213.html
+++ b/notes/cpp/0213.html
@@ -79,39 +79,54 @@
         </div>
         <hr>
         <!-- 正文 -->
-        <h1 class="code">88 常用集合算法 - set_intersection.cpp</h1>
+        <h1 class="code">84 常用拷贝和替换算法 - replace_if.cpp</h1>
         <pre>
             <code class="code">
-#include<iostream>
+#include&lt;iostream&gt;
 using namespace std;
-#include<vector>
-#include<algorithm>
+#include&lt;vector&gt;
+#include&lt;algorithm&gt;
 
-//常用集合算法 - set_intersection
-void myPrint(int val)
+class MyPrint
 {
-	cout << val << " ";
-}
+public:
+	void operator()(int val)
+	{
+		cout &lt;&lt; val &lt;&lt; " ";
+	}
+};
 
+class Greater30
+{
+public:
+	bool operator()(int val)
+	{
+		return val &gt;= 30;
+	}
+};
+
+//常用拷贝和替换算法 replace_if
 void test01()
 {
-	vector<int> v1;
-	vector<int> v2;
-	for (int i = 0; i < 10; i++)
-	{
-		v1.push_back(i);  // 0 ~ 9
-		v2.push_back(i + 5);  // 5 ~ 14
-	}
+	vector&lt;int&gt; v;
+	v.push_back(10);
+	v.push_back(40);
+	v.push_back(20);
+	v.push_back(40);
+	v.push_back(30);
+	v.push_back(50);
+	v.push_back(20);
+	v.push_back(30);
 
-	vector<int> vTarget;
-	//目标容器需要提前开辟空间
-	//最特殊的情况 大容器包含小容器  开辟空间 取小容器的size即可
-	vTarget.resize(min(v1.size(), v2.size()));
+	cout &lt;&lt; "替换前: " &lt;&lt; endl;
+	for_each(v.begin(), v.end(), MyPrint());
+	cout &lt;&lt; endl;
 
-	//获取交集
-	vector<int>::iterator itEnd = set_intersection(v1.begin(), v1.end(), v2.begin(), v2.end(), vTarget.begin());
-	for_each(vTarget.begin(), itEnd, myPrint);
-	cout << endl;
+	//将大于等于30的 替换为 3000
+	replace_if(v.begin(), v.end(), Greater30(), 3000);
+	cout &lt;&lt; "替换后: " &lt;&lt; endl;
+	for_each(v.begin(), v.end(), MyPrint());
+	cout &lt;&lt; endl;
 }
 
 int main()
