--- a/notes/cpp/0214.html
+++ b/notes/cpp/0214.html
@@ -79,40 +79,45 @@
         </div>
         <hr>
         <!-- 正文 -->
-        <h1 class="code">89 常用集合算法 - set_union.cpp</h1>
+        <h1 class="code">85 常用拷贝和替换算法 - swap.cpp</h1>
         <pre>
             <code class="code">
-#include<iostream>
+#include&lt;iostream&gt;
 using namespace std;
-#include<vector>
-#include<algorithm>
+#include&lt;vector&gt;
+#include&lt;algorithm&gt;
 
-//常用集合算法 set_union
+//常用拷贝和替换算法 swap
 void myPrint(int val)
 {
-	cout << val << " ";
+	cout &lt;&lt; val &lt;&lt; " ";
 }
-
 void test01()
 {
-	vector<int> v1;
-	vector<int> v2;
+	vector&lt;int&gt; v1;
+	vector&lt;int&gt; v2;
 
-	for (int i = 0; i < 10; i++)
+	for (int i = 0; i &lt; 10; i++)
 	{
 		v1.push_back(i);
-		v2.push_back(i + 5);
+		v2.push_back(i + 100);
 	}
 
-	vector<int> vTarget;
-	//目标容器提前开辟空间
-	//最特殊情况 两个容器没有交集，并集大小就是两个容器size相加
-	vTarget.resize(v1.size() + v2.size());
+	cout &lt;&lt; "交换前: " &lt;&lt; endl;
+	for_each(v1.begin(), v1.end(), myPrint);
+	cout &lt;&lt; endl;
+	for_each(v2.begin(), v2.end(), myPrint);
+	cout &lt;&lt; endl;
 
-	vector<int>::iterator itEnd = set_union(v1.begin(), v1.end(), v2.begin(), v2.end(), vTarget.begin());
+	cout &lt;&lt; "-----------------" &lt;&lt; endl;
+	cout &lt;&lt; "交换后: " &lt;&lt; endl;
 
-	for_each(vTarget.begin(), itEnd, myPrint);
-	cout << endl;
+	swap(v1, v2);
+	
+	for_each(v1.begin(), v1.end(), myPrint);
+	cout &lt;&lt; endl;
+	for_each(v2.begin(), v2.end(), myPrint);
+	cout &lt;&lt; endl;
 }
 
 int main()
