--- a/notes/cpp/0215.html
+++ b/notes/cpp/0215.html
@@ -79,48 +79,27 @@
         </div>
         <hr>
         <!-- 正文 -->
-        <h1 class="code">90 常用集合算法 - set_difference.cpp</h1>
+        <h1 class="code">86 常用算术生成算法 - accumulate.cpp</h1>
         <pre>
             <code class="code">
-#include<iostream>
+#include&lt;iostream&gt;
 using namespace std;
-#include<vector>
-#include<algorithm>
+#include&lt;vector&gt;
+#include&lt;numeric&gt;
 
-//常用集合算法 set_difference
-void myPrint(int val)
-{
-	cout << val << " ";
-}
-
+//常用算术生成算法
 void test01()
 {
-	vector<int> v1;
-	vector<int> v2;
-	for (int i = 0; i < 10; i++)
+	vector&lt;int&gt; v;
+
+	for (int i = 0; i &lt;= 100; i++)
 	{
-		v1.push_back(i);
-		v2.push_back(i + 5);
+		v.push_back(i);
 	}
+	//参数3  起始累加值
+	int total = accumulate(v.begin(), v.end(), 0);
 
-	//创建目标容器
-	vector<int> vTarget;
-	//给目标容器开辟空间
-	//最特殊情况 两个容器没有交集 取两个容器中大的size作为目标容器的size来开辟空间
-	vTarget.resize(max(v1.size(), v2.size()));
-
-	cout << "v1和v2的差集为: " << endl;
-
-	vector<int>::iterator itEnd = set_difference(v1.begin(), v1.end(), v2.begin(), v2.end(), vTarget.begin());
-
-	for_each(vTarget.begin(), itEnd, myPrint);
-	cout << endl;
-
-	cout << "v2和v1的差集为: " << endl;
-	itEnd = set_difference(v2.begin(), v2.end(), v1.begin(), v1.end(), vTarget.begin());
-
-	for_each(vTarget.begin(), itEnd, myPrint);
-	cout << endl;
+	cout &lt;&lt; "total = " &lt;&lt; total &lt;&lt; endl;
 }
 
 int main()
