--- a/notes/cpp/0217.html
+++ b/notes/cpp/0217.html
@@ -79,37 +79,46 @@
         </div>
         <hr>
         <!-- 正文 -->
-        <h1 class="code">person.hpp</h1>
+        <h1 class="code">88 常用集合算法 - set_intersection.cpp</h1>
         <pre>
             <code class="code">
-#pragma once
-#include<iostream>
+#include&lt;iostream&gt;
 using namespace std;
+#include&lt;vector&gt;
+#include&lt;algorithm&gt;
 
-#include<string>
-template<class T1, class T2>
-class Person
+//常用集合算法 - set_intersection
+void myPrint(int val)
 {
-public:
-	Person(T1 name, T2 age);
-
-	void showPerson();
-
-	T1 m_Name;
-	T2 m_Age;
-};
-
-template<class T1, class T2>
-Person<T1, T2>::Person(T1 name, T2 age)
-{
-	this->m_Name = name;
-	this->m_Age = age;
+	cout &lt;&lt; val &lt;&lt; " ";
 }
 
-template<class T1, class T2>
-void Person<T1, T2>::showPerson()
+void test01()
 {
-	cout << "ÐÕÃû: " << this->m_Name << " ÄêÁä: " << this->m_Age << endl;
+	vector&lt;int&gt; v1;
+	vector&lt;int&gt; v2;
+	for (int i = 0; i &lt; 10; i++)
+	{
+		v1.push_back(i);  // 0 ~ 9
+		v2.push_back(i + 5);  // 5 ~ 14
+	}
+
+	vector&lt;int&gt; vTarget;
+	//目标容器需要提前开辟空间
+	//最特殊的情况 大容器包含小容器  开辟空间 取小容器的size即可
+	vTarget.resize(min(v1.size(), v2.size()));
+
+	//获取交集
+	vector&lt;int&gt;::iterator itEnd = set_intersection(v1.begin(), v1.end(), v2.begin(), v2.end(), vTarget.begin());
+	for_each(vTarget.begin(), itEnd, myPrint);
+	cout &lt;&lt; endl;
+}
+
+int main()
+{
+	test01();
+
+	return 0;
 }
             </code>
         </pre>
