--- a/notes/cpp/0219.html
+++ b/notes/cpp/0219.html
@@ -79,118 +79,53 @@
         </div>
         <hr>
         <!-- 正文 -->
-        <h1 class="code">40 STL案例 - 评委打分.cpp</h1>
+        <h1 class="code">90 常用集合算法 - set_difference.cpp</h1>
         <pre>
             <code class="code">
-#include<iostream>
+#include&lt;iostream&gt;
 using namespace std;
-#include<vector>
-#include<string>
-#include<deque>
-#include<algorithm>
-#include<ctime>
+#include&lt;vector&gt;
+#include&lt;algorithm&gt;
 
-//有5名选手：选手ABCDE，10个评委分别对每一名选手打分，去除最高分，去除评委中最低分，取平均分
-
-class Person
+//常用集合算法 set_difference
+void myPrint(int val)
 {
-public:
-	Person(string name, int score)
-	{
-		this->m_Name = name;
-		this->m_Score = score;
-	}
-
-	string m_Name;  //姓名
-	int m_Score;  //平均分
-};
-
-void createPerson(vector<Person>& v)
-{
-	string nameSeed = "ABCDE";
-	for (int i = 0; i < 5; i++)
-	{
-		string name = "选手";
-		name += nameSeed[i];
-
-		int score = 0;
-
-		Person p(name, score);
-
-		//将创建的Person对象 放入到容器中
-		v.push_back(p);
-	}
+	cout &lt;&lt; val &lt;&lt; " ";
 }
 
-//打分
-void setScore(vector<Person>& v)
+void test01()
 {
-	for (vector<Person>::iterator it = v.begin(); it != v.end(); it++)
+	vector&lt;int&gt; v1;
+	vector&lt;int&gt; v2;
+	for (int i = 0; i &lt; 10; i++)
 	{
-		//将评委的分数 放入到deque容器中
-		deque<int> d;
-		for (int i = 0; i < 10; i++)
-		{
-			int score = rand() % 41 + 60;  // 60 ~ 100
-			d.push_back(score);
-		}
-
-		//cout << "选手: " << it->m_Name << "打分: " << endl;
-		//for (deque<int>::iterator dit = d.begin(); dit != d.end(); dit++)
-		//{
-		//	cout << *dit << " ";
-		//}
-		//cout << endl;
-
-		//排序
-		sort(d.begin(), d.end());
-
-		//去除最高和最低分
-		d.pop_back();
-		d.pop_front();
-
-		//取平均分
-		int sum = 0;
-		for (deque<int>::iterator dit = d.begin(); dit != d.end(); dit++)
-		{
-			sum += *dit;  //累加每个评委的分数
-		}
-
-		int avg = sum / d.size();
-
-		//将平均分 赋值给选手身上
-		it->m_Score = avg;
+		v1.push_back(i);
+		v2.push_back(i + 5);
 	}
-}
 
-void showScore(vector<Person>& v)
-{
-	for (vector<Person>::iterator it = v.begin(); it != v.end(); it++)
-	{
-		cout << "姓名: " << it->m_Name << "平均分: " << it->m_Score << endl;
-	}
+	//创建目标容器
+	vector&lt;int&gt; vTarget;
+	//给目标容器开辟空间
+	//最特殊情况 两个容器没有交集 取两个容器中大的size作为目标容器的size来开辟空间
+	vTarget.resize(max(v1.size(), v2.size()));
+
+	cout &lt;&lt; "v1和v2的差集为: " &lt;&lt; endl;
+
+	vector&lt;int&gt;::iterator itEnd = set_difference(v1.begin(), v1.end(), v2.begin(), v2.end(), vTarget.begin());
+
+	for_each(vTarget.begin(), itEnd, myPrint);
+	cout &lt;&lt; endl;
+
+	cout &lt;&lt; "v2和v1的差集为: " &lt;&lt; endl;
+	itEnd = set_difference(v2.begin(), v2.end(), v1.begin(), v1.end(), vTarget.begin());
+
+	for_each(vTarget.begin(), itEnd, myPrint);
+	cout &lt;&lt; endl;
 }
 
 int main()
 {
-	//随机数种子
-	srand((unsigned int) time(NULL));
-
-	//1.创建5名选手
-	vector<Person> v;  //存放选手容器
-	createPerson(v);
-
-	//测试
-	//for (vector<Person>::iterator it = v.begin(); it != v.end(); it++)
-	//{
-	//	cout << "姓名: " << (*it).m_Name << " 分数: " << (*it).m_Score << endl;
-	//}
-
-	//2.给5名选手打分
-	setScore(v);
-
-	//3.显示最后得分
-	showScore(v);
+	test01();
 
 	return 0;
 }
